--- a/source/_posts/收藏句子.md
+++ b/source/_posts/收藏句子.md
@@ -66,34 +66,6 @@ toc:
 * 刚走到最后再回首，身边已经没有来时伴。丢在人生旅途中的人，不好找，也寻不回。
 * 他们是过去的人，就该让他们活在回忆里。
 
-
-## 丧、丧、丧
-----------------------
-<center>![收藏](/assets/20180202_shoucang/shoucang.jpeg)</center>
-
-* 这个世界疯狂，没人性，腐败。你却一直清醒，温柔，一尘不染。
-* 当你什么都不再期待，不再奢望的时候，或许一切都会如期而至。
-* 多一些不需要理由的开心。
-* 日子熬我，我熬粥（日子熬人，随便活吧）。
-* 我们都是熬不过世俗的普通人。
-* 委屈受多了，给我再多糖也会扔。
-* 别在最好的年龄，辜负了最好的自己。
-* 一直都在辜负生活，所以生活也不曾善待我们
-* 在最难过的那天夜里，我是一个人过的
-* 究竟什么样的终点，才配得上这一路颠沛流离
-* 要长大 要乖 要努力 要不负众望
-* 喜欢有阳光的早上 好像什么都可以重新开始
-* 你说的很对，不过我不听。
-* 好坏都收下，然后一声不响继续生活。
-* 人生本来就没有相欠，情出自愿，事过无悔。
-* 推开自己喜欢的东西是成长。
-<!--有缘无份的时候好聚好散是最好的尊重。-->
-<!--从不认识到不认识，这就是我们之间所有的故事。-->
-* 现在的生活，并不是我想要的，但确实是我自找的，所以活该也认了。
-* 不后悔遇见了谁，只是后悔，为何成了现在的模样。
-* 不想说这个世界什么坏话了，都是我不好
-<!--如果每个人都是一颗小星球，逝去的亲友就是身边的暗物质。我愿能再见你，我知我再见不到你。但你的引力仍在。我感激我们的光锥曾彼此重叠，而你永远改变了我的星轨。纵使再不能相见，你仍是我所在的星系未曾分崩离析的原因，是我宇宙之网的永恒组成。-->
-
 ## 那些很喜欢的句子
 ----------------------
 * 我们毕生所求，不过是真爱和自由！
@@ -131,62 +103,6 @@ toc:
  > 在茫茫人海中相遇相知相守，无论谁都不会一帆风顺，只有一颗舍得付出懂得感恩的心，才能拥有一生的爱和幸福。——宫崎骏
  > 尽可能爱的单纯一点，尽可能活的纯洁一点，尽可能活的有良心一点，尽可能在成为一个成功的人同时成为一个可爱的人，尽可能活的美一点。——陈果
  > 肉体是每个人的神殿，不管里面供奉的是什么，都应该好好保持它的强韧、美丽和清洁。——村上春树
- 
- ## 情感
- ----------------------
- * 爱情是有浓度的。
- * 始于颜值，陷于才华，忠于人品。
- * 先要彼此都有爱，彼此欣赏和尊重；彼此的世界观、三观不能相差太远，能聊得来、在某个领域能玩到一块；然后是彼此都能有一定的自制力，内心坚定了彼此，能拒绝外来异性诱惑；最后是共同经营，共同进步，不急不躁，在平淡的生活里能偶尔用心为对方制造惊喜和浪漫，在彼此的生活里都留下难以磨灭的深刻回忆。
- * 如果有幸遇到能凑合忍得了的人，就用尽全力抓紧，无论如何都不要放手。
- * 幸福就是找个温暖的人过一辈子。
- * 爱一个人最好的方式，是经营好自己，给对方一个优质的爱人。不是拼命对一个人好，那人就会拼命爱你。俗世的爱情难免有现实的一面：你有价值，你的付出才有人重视。
- * 我很清楚的知道，这条路走下去会很艰难，但不走好像又会后悔一辈子。
- * 你看世人多奇怪。喜欢的人得不到，得到了不珍惜，在一起时怀疑，失去了怀念，怀念的想相见，相见的又恨晚。终其一生，满是遗憾。
- * 荷尔蒙只负责一见钟情，柏拉图负责白头到老。
- 
- <center>
- 最好的爱情就是
- 两个人都是独立的个体
- 都可以不用掩饰的做自己
- 都有自己的追求和梦想
- 但是在我们独自打拼的时光里
- 都会把彼此放在心上
- 都会知道我们的每一份努力都是为了
- 两个人的支流最终能汇聚成爱情的长河
- 往时光的尽头永无止境的流淌
- </center>
- 
- <center>
- 一生只谈一次恋爱是最好的
- 经历的太多了，会麻木
- 分离的多了，会习惯
- 换恋人多了，会比较
- 到最后，你不会再相信爱情
- 其实对于爱情，越单纯越幸福
- </center>
- 
- * 时间真的是这个世界上最好的跨度，让惨痛变得苍白，让执着的人选择离开，然后经历沧桑，人来人往；你会明白，万般皆是命，半点不由人。
- * 爱的时候不辜负人，玩的时候不辜负风景，睡觉时不辜负床，一个人时不辜负自己。
- * 你来人间一趟，不是来刷任务的，你该好好享受阳光、雨露和爱。
- * 生活是场清醒的梦，梦到醒不来的梦。
- * 偏要在这薄情的世界，深情地活。
- * 就这一生，可以快乐就别难过。
- * 希望日子，和我都不难过，干净脱俗温柔上进。
- * 一生只需一人，知我冷暖懂我悲欢。
- * 梦里出现的人，醒来时就该去见他。The people in your dreams,you should call them when you're awake.
- * 只有不曾被爱过的人，才知道爱的珍贵。
- * 幸福其实很简单：有人爱，有事做，有期待。
- 
-## 励志
-----------------------
-* 不辜负时间的馈赠，努力活成自己喜欢的模样。
-* 要酷，要优秀，要成为别人的可望不可及。
-* 少吃真的会瘦，瘦了真的好看，好看真的有用。
-* 狠人的三大表现：说减肥就减肥，说不玩手机就不玩手机，说睡觉就睡觉。
-* 懂得自制，方能掌控人生。也许阻碍你变好的敌人，自始至终，就只是懒惰的自己而已。
-* 自律，生长，爱美食，也爱其他。
-* 世界上最遥远的距离不是远方，而是你不敢迈出去的那一步
-* 精神状态的好，完完全全体现在肉体上。
 
 ## 那些应该牢记的道理
 ----------------------
@@ -230,5 +146,118 @@ toc:
 * 任何评价都要对事不对人，并给出具体的解释
 
 
-<!--谈恋爱时，作死的程度不要超过漂亮的程度，人际交往中，耿直的程度不要超过能力的限度-->
-<!--遇见强势的人要示弱，遇见自卑的人要尊重，遇见有趣的人要勾搭-->
+<center>![收藏](/assets/20180202_shoucang/shoucang.jpeg)</center>
+
+## 丧、丧、丧
+----------------------
+* 这个世界疯狂，没人性，腐败。你却一直清醒，温柔，一尘不染。
+* 当你什么都不再期待，不再奢望的时候，或许一切都会如期而至。
+* 多一些不需要理由的开心。
+* 日子熬我，我熬粥（日子熬人，随便活吧）。
+* 我们都是熬不过世俗的普通人。
+* 委屈受多了，给我再多糖也会扔。
+* 别在最好的年龄，辜负了最好的自己。
+* 一直都在辜负生活，所以生活也不曾善待我们
+* 在最难过的那天夜里，我是一个人过的
+* 究竟什么样的终点，才配得上这一路颠沛流离
+* 要长大 要乖 要努力 要不负众望
+* 喜欢有阳光的早上 好像什么都可以重新开始
+* 你说的很对，不过我不听。
+* 好坏都收下，然后一声不响继续生活。
+* 人生本来就没有相欠，情出自愿，事过无悔。
+* 推开自己喜欢的东西是成长。
+* 现在的生活，并不是我想要的，但确实是我自找的，所以活该也认了。
+* 不后悔遇见了谁，只是后悔，为何成了现在的模样。
+* 不想说这个世界什么坏话了，都是我不好
+* 如果每个人都是一颗小星球，逝去的亲友就是身边的暗物质。我愿能再见你，我知我再见不到你。但你的引力仍在。我感激我们的光锥曾彼此重叠，而你永远改变了我的星轨。纵使再不能相见，你仍是我所在的星系未曾分崩离析的原因，是我宇宙之网的永恒组成。
+* 有缘无份的时候好聚好散是最好的尊重。
+* 从不认识到不认识，这就是我们之间所有的故事。
+
+## 鸡汤&毒鸡汤
+----------------------
+* 爱情是有浓度的。
+* 始于颜值，陷于才华，忠于人品。
+* 先要彼此都有爱，彼此欣赏和尊重；彼此的世界观、三观不能相差太远，能聊得来、在某个领域能玩到一块；然后是彼此都能有一定的自制力，内心坚定了彼此，能拒绝外来异性诱惑；最后是共同经营，共同进步，不急不躁，在平淡的生活里能偶尔用心为对方制造惊喜和浪漫，在彼此的生活里都留下难以磨灭的深刻回忆。
+* 如果有幸遇到能凑合忍得了的人，就用尽全力抓紧，无论如何都不要放手。
+* 幸福就是找个温暖的人过一辈子。
+* 爱一个人最好的方式，是经营好自己，给对方一个优质的爱人。不是拼命对一个人好，那人就会拼命爱你。俗世的爱情难免有现实的一面：你有价值，你的付出才有人重视。
+* 我很清楚的知道，这条路走下去会很艰难，但不走好像又会后悔一辈子。
+* 你看世人多奇怪。喜欢的人得不到，得到了不珍惜，在一起时怀疑，失去了怀念，怀念的想相见，相见的又恨晚。终其一生，满是遗憾。
+* 荷尔蒙只负责一见钟情，柏拉图负责白头到老。
+
+<center>
+最好的爱情就是
+两个人都是独立的个体
+都可以不用掩饰的做自己
+都有自己的追求和梦想
+但是在我们独自打拼的时光里
+都会把彼此放在心上
+都会知道我们的每一份努力都是为了
+两个人的支流最终能汇聚成爱情的长河
+往时光的尽头永无止境的流淌
+</center>
+
+<center>
+一生只谈一次恋爱是最好的
+经历的太多了，会麻木
+分离的多了，会习惯
+换恋人多了，会比较
+到最后，你不会再相信爱情
+其实对于爱情，越单纯越幸福
+</center>
+
+* 时间真的是这个世界上最好的跨度，让惨痛变得苍白，让执着的人选择离开，然后经历沧桑，人来人往；你会明白，万般皆是命，半点不由人。
+* 爱的时候不辜负人，玩的时候不辜负风景，睡觉时不辜负床，一个人时不辜负自己。
+* 你来人间一趟，不是来刷任务的，你该好好享受阳光、雨露和爱。
+* 生活是场清醒的梦，梦到醒不来的梦。
+* 偏要在这薄情的世界，深情地活。
+* 就这一生，可以快乐就别难过。
+* 希望日子，和我都不难过，干净脱俗温柔上进。
+* 一生只需一人，知我冷暖懂我悲欢。
+* 梦里出现的人，醒来时就该去见他。The people in your dreams,you should call them when you're awake.
+* 只有不曾被爱过的人，才知道爱的珍贵。
+* 幸福其实很简单：有人爱，有事做，有期待。
+* 自爱，沉稳，而后爱人。
+* 其实你的孤独，就是你内心的黑暗。
+* 他们都说，爱一个人是劫，有人劫后余生，有人在劫难逃。
+* 尽人事听天命。
+* 这么多年，你一个人在走，走过了人性的背后和白云苍狗。
+* 承担该承担的，面对该面对的。相信自己，接纳自己，并好好爱自己。
+* 终会有人把你捧在心尖上，喜欢你喜欢的像个傻子，终会有人保护好你的少女心，让你再次相信爱情。
+* 无论你遇到谁，都是你生命中该遇到的人。
+* 愿有人懂你低头不语，知你心酸委屈。
+* 哪有什么坚强，全靠死撑。
+* 如果你都没有努力去争取就说你得不到，你遗憾吗，难道不会觉得可惜吗，要么一生，要么陌生。
+* 凭什么说一个爱你入骨的姑娘不懂事，又凭什么说一个爱你到卑微的男孩不成熟，都各有各的故事。
+* 原来所有的煎熬和孤独都成了我走向你的路。
+* 那时候天总是很蓝，日子总是过得很慢。
+* 面朝大海春暖花开时海子的选择，人不是生来被打败的是海明威的选择。
+* 人生有六个字，前面三个是不害怕，后面三个是不后悔。
+* 熬过这段灰暗的时光，希望一切都可以苦尽甘来。
+* 日益努力，而后风生水起。众生皆苦，你也不能认输啊。
+* 书要好好读，喜欢的人要好好争取。
+* 如果有人陪你一起疯，是不是就不怕江湖路远了。
+* 成长就是：渐渐温柔，克制，朴素，不怨不问不记，安静中渐渐体会生命的盛大。
+* 你不喜欢这个世界，不喜欢你的生活，其实就是不喜欢现在的你，一切自爱必会带来热爱生活，一切厌恶追根溯源必是自我厌倦。
+* 别说什么来日方长，这世上回首之间的都是人走茶凉。
+* 我不想说，却又想说些什么，我要怎么说，该说些什么。。。
+* 前路漫漫，当克己，当慎独。
+* 你之所以觉得时间一年比一年过得快，是因为时间对你一年比一年重要。
+* 能治愈你的从来都不是时间，是明白。
+* 心里有很多苦的人，要多少甜才填的满。心里有很多苦的人，只要一点点甜就能填满。
+* 要努力呀，为了想要的生活，为了人间的烟火气，为了今天的风和月。
+* 晚点遇见吧，你刚好成熟，我刚好温柔。
+* 如果做不到对别人狠，那就对自己狠一点。
+* 在自己心智还没完全成熟稳重时候，我愿意拒绝所有的暧昧和放下想爱的人。
+* 我所理解的生活，就是和自己喜欢的一切在一起。
+* 刻意去找的东西，往往是找不到的，天下万物的来和去，都有他的时间。——三毛
+* 不辜负时间的馈赠，努力活成自己喜欢的模样。
+* 要酷，要优秀，要成为别人的可望不可及。
+* 少吃真的会瘦，瘦了真的好看，好看真的有用。
+* 狠人的三大表现：说减肥就减肥，说不玩手机就不玩手机，说睡觉就睡觉。
+* 懂得自制，方能掌控人生。也许阻碍你变好的敌人，自始至终，就只是懒惰的自己而已。
+* 自律，生长，爱美食，也爱其他。
+* 世界上最遥远的距离不是远方，而是你不敢迈出去的那一步
+* 精神状态的好，完完全全体现在肉体上。
+* 谈恋爱时，作死的程度不要超过漂亮的程度，人际交往中，耿直的程度不要超过能力的限度
+* 遇见强势的人要示弱，遇见自卑的人要尊重，遇见有趣的人要勾搭
