soucang add xizang

--- a/source/_posts/收藏句子.md
+++ b/source/_posts/收藏句子.md
@@ -220,7 +220,7 @@ toc:
 * 自爱，沉稳，而后爱人。
 * 其实你的孤独，就是你内心的黑暗。
 * 他们都说，爱一个人是劫，有人劫后余生，有人在劫难逃。
-* 尽人事听天命。
+* 尽人事，听天命。情出自愿，事过无悔。
 * 这么多年，你一个人在走，走过了人性的背后和白云苍狗。
 * 承担该承担的，面对该面对的。相信自己，接纳自己，并好好爱自己。
 * 终会有人把你捧在心尖上，喜欢你喜欢的像个傻子，终会有人保护好你的少女心，让你再次相信爱情。
@@ -261,3 +261,34 @@ toc:
 * 精神状态的好，完完全全体现在肉体上。
 * 谈恋爱时，作死的程度不要超过漂亮的程度，人际交往中，耿直的程度不要超过能力的限度
 * 遇见强势的人要示弱，遇见自卑的人要尊重，遇见有趣的人要勾搭
+* 爱没有别的愿望，只要成全自己。
+* 我们听过无数的道理，却仍旧过不好这一生。
+* 多少有些遗憾提起来满是心酸，不说又怕自己会忘记。好像有的往事，久了，也只是故事了。
+* 有时候有些人有些事，我们除了说再见，别无选择。
+* 最近日子和我都有些难过，什么都不说就好。
+* 喜欢一个人事藏不住的，就想日出日落，海涨潮退。
+* 人生最了不起的四种心境：痛而不言，笑而不语，迷而不失，惊而不乱。
+* 愿你以梦为马，不负韶华，愿你拼尽全力，无畏前行。
+* 胖，其实是你的不思进取，不努力，不作为，得过且过的直观表现。
+* 知足且上进，温柔而坚定。
+* 无论怎样，路是自己走的，抬起头，不能怂。
+* 做人要懂事有趣，保持理智。
+* 一定要自己做决定啊，就算是后悔也要自己来。
+* 要替自己着想，但为自己而活。
+* 往好里说是变得顽强了，往坏里说是自己身上纯真的感受性磨损掉了。——村上春树
+* 遇见你不容易，错过了会很可惜。
+* 其实道理谁都懂，只是有时候选择自欺欺人。
+* 在寻找真爱的路上匍匐前进，不管南北东西，直觉会给我们指引。
+* 所有人都在努力，并不是只有你，满腹委屈。
+* 我得收拾自己的烂摊子。
+* 唯有身处卑微的人最有机会看到世态人情的真相。——杨绛
+* 好好生活，别总跟自己过不去。
+* 可不可以跟世界请个假，我想暂时离开下。& 我心情不好，想死两天。（I feel bad and wanna die for about two days.）
+* 世间什么最难得？徒手摘星，爱而不得，世人万千，再难遇我。
+* 我有一壶酒，足以慰风尘。
+* 你会遇到很多让你心动的人，却再难遇到一个让你心安的人。
+* 我不喜欢我自己，这种感觉真的糟糕透了。
+* 看不懂就不要妄自揣测别人的无心，你注定辛苦。
+* 跟生活玩，别太认真了，反正最终没谁能活着离开这场游戏。
+* 凡事都有它自己的节奏，他们有他们的节奏，你有你自己的，耐心一点。
+
