--- a/source/_posts/收藏句子.md
+++ b/source/_posts/收藏句子.md
@@ -291,4 +291,43 @@ toc:
 * 看不懂就不要妄自揣测别人的无心，你注定辛苦。
 * 跟生活玩，别太认真了，反正最终没谁能活着离开这场游戏。
 * 凡事都有它自己的节奏，他们有他们的节奏，你有你自己的，耐心一点。
-
+* 当生活不会再有什么惊喜和感动，你会发现，孤独其实是最大的自由。
+* 如果最后是你，晚点真的没关系。
+* 你总会遇到一个人恰如其分的适合你，不用刻意迁就，可以任性撒娇，想爱并且默契，所以你要等。
+* 我希望有人读懂你的难过，明白你焦虑背后的所有小心翼翼，我希望有人把你捧在手心里，渴望慰藉你所有孤独的情绪，你不要对自己失望迷茫，你再等等。
+* 成熟的人，都有一种默契，你不联系我，我也不联系你，自制能力超级好，内心折磨到死也不妥协。
+* 去经历，然后去后悔。去做你想做的，去选你爱的，而不是别人眼里正确的，你的一辈子应该为自己而活。
+* 我们明明离得那么近，可却又那么远。
+* 以后跟我过余生的那个人请听好，我可以跟你受十分的苦，但是，请不要让我受半分的委屈。
+* 这一瞬间，像被全世界抛弃了。
+* 总是这样，很难过又很难说......
+* 原来顺其自然 是因为无能为力
+* 在最黑暗的那段人生，是我自己把自己拉出深渊。没有那个人，我就做那个人。
+* 我知道这个世界什么都善变，可是说真的，眼前这个人，他让我相信永远。
+* 一个人的生活，没牵挂，没感动，没惊喜，也没失望。
+* 所谓节日，就是让快乐的人更快乐，孤单的人更孤单的日子。
+* 我现在，除了别人觉得不好，再没什么不好。
+* 平和自在。
+* 当你因为太过迷茫，太过偏执，以至于曲解了梦想和责任，不如先学会生活。——皮囊
+* 难熬的日子里，什么也没说，所以以后，也不必说。
+* 生活真是糟透了，烂透了，没得救。
+* 要总结任何一个人一生的经历，你并不需要太多的字，有人已经用十二个字概括了：他生了下来，他受了苦，他死了。如何在短暂的一生，幸福而充实地活着，是我们都在追寻的答案。
+* 大多数人的生活，就是一种水滴石穿的单调和宁静。
+* 好多事情我真的接受不了，但我也无力抗拒。这辈子从来就没坚强过，大小坎都是死撑。
+* 这个世界已经有很多人和事让你失望了，而最不应该的就是自己还令自己失望。
+* 万般皆苦，只能自渡。
+* 凡事开心就好，反正我们谁也别想活着离开这世界。
+* 爱的时候不辜负人，玩的时候不辜负风景，睡觉时不辜负床，一个人时不辜负自己。
+* 人没活明白的第一个特征就是喜欢骗自己。
+* 除非互相喜欢，否则所有的喜欢，全都是心酸。
+* 生活有一点我不是太喜欢，就是...它总让更懂事的人来承担糟糕的感受和结果。
+* 接受分道扬镳，接受世事无常，接受孤独挫折，接受突如其来的无力感，接受自己的缺点，然后发自内心地去改变，找到一个平衡点，跟世界相处，首先是和自己相处，天黑开盏灯，落雨拿把伞，难过先难过，但也不作死，天亮以后，满血复活。
+<!--* 我未来的那个他呀，一定不爱我吧，不然怎么让我承受着这漫长的煎熬和等待......你欠我的深情，打算什么时候还-->
+* 冬渐去，春已近，愿心中无霾，轻扬眉，颔首笑
+* 抓不住的东西，伸手都是错的
+* 听说风吹过经幡一次，就是诵经一遍。
+* 当你心中满是荒凉，人间便似绝望刑场。
+* 满天星光，满屋月亮，人生何如，为什么这么荒凉——萧红
+* 一开始我以为人是慢慢长大的，后来才发现人都是突然间长大的
+* 关于等待的故事总是让人很动容，可它能感动到的，也不过是读者和主人公自己。
+* 但愿在这个拼的你死我活的世界里，我能有一份不用努力的，刚刚好的爱情。
