--- a/source/_posts/收藏句子.md
+++ b/source/_posts/收藏句子.md
@@ -7,7 +7,7 @@ toc:
 ---
 
 <center>![收藏](/assets/20180202_shoucang/shoucang1.jpg)</center>
-<!--carol  lucca karol  cassie charis Claire Colleen Coral Cori Cynthia Corrie-->
+<!--carol  lucca karol  cassie charis Claire Colleen Coral Cori Cynthia Corrie Iris Jessica Jessie Gillian Kate Laura-->
 
 
 ## 那些很文艺的句子
@@ -331,3 +331,63 @@ toc:
 * 一开始我以为人是慢慢长大的，后来才发现人都是突然间长大的
 * 关于等待的故事总是让人很动容，可它能感动到的，也不过是读者和主人公自己。
 * 但愿在这个拼的你死我活的世界里，我能有一份不用努力的，刚刚好的爱情。
+* 那是种没人读懂的倔强，骨子里是铮铮的傲......
+* 每一次跑步的背后都是苦行僧一样的坚持，过去觉得人生苦短应该及时行乐，今朝有酒今朝醉，人不风流枉少年，但是随着时间的推移，慢慢明白每一次不自律行为的背后只会给你带来更大的伤害，所谓的自由不是说你能为所欲为，而是自律之后你知道有所为有所不为。
+<!--* 我还是这个不成器的样子，没有给他们什么，反而成为他们最放心不下的牵挂。-->
+* 真不想乖乖的和这个世界握手言和呢
+* 总不能还没努力就向生活妥协吧
+* 你真的得碰到那个你能降得住又能降得住你的人，才算合适，彼此爱慕又互相嫌弃，要不然这一辈子，该是多么无趣又无欲。
+* 我们最终都要远行，最终都要与稚嫩的自己告别，告别是通向成长的苦行之路。
+* 因为无能为力 所以顺其自然
+* 长大后才发现，生活还是需要一点演技。
+* 难过怎能讲的清楚，失落怎能感同身受。
+* 我会记住生命中不期而遇的温暖，我也记得大雨滂沱没有伞的日子。
+* 生活和电影不一样，生活难多了。
+* 以笑的方式哭，在死亡的伴随下活着。——《活着》
+* 人类无法承受太多的真实。——《活着》
+* 没有什么比时间更有说服力了，因为时间无需通知我们就可以改变一切。——《活着》
+* 人这一生，一定要明白一些道理，比如活着要开心，要快乐。——《活着》
+* 活着是自己去感受活着的幸福和辛苦、无聊和平庸；幸存，不过是旁人的评价罢了。——《活着》
+* 若干年后，你也经历了一些人事，也有了一些只能在失眠的夜里独自咀嚼的故事。你青涩褪尽，渐渐懂了生之可忧死之可怖。你终于也明白并且心平气和的接受了他不过是个平凡的人，与其他甲乙丙丁并没有什么本质的不同。可是 说不清楚为什么，你还是有所眷恋，像是一种迷信，庙宇塌毁了，神还是神。
+* 成年人的世界 就是应该果断又干脆 不耽误任何人 不消耗任何人 不浪费任何人 这是一种善良
+* 他若喜欢你，你脾气再大都叫个性，他若不喜欢你，就算你温顺的像只猫，他都嫌你掉毛。
+* 总要有些随风，有些入梦，有些长留在心中。
+* 愿你一生温暖纯良，不舍爱与自由。
+* 记住了 自己喜欢的东西 就不要问别人好不好看 喜欢胜过所有道理 原则抵不过我乐意
+* 想做什么就去做吧 每一个犹豫不决的挣扎 都是对人生最大的浪费——《不认命 就拼命》
+* 你要学着无论遇到什么事情 欣喜 悲伤或是濒临崩溃 都能够不动声色自己处理事情 自己辨别对错 好好成长
+* 人们去远方只是为了紧紧地搂住自己 我只喜欢在笛声中闻着野草的清香
+* 像他明天就会来一样期待 像他永远不会来一样生活——张爱玲
+* 我们终其一生的努力 真正能够把握的也不过是自己的喜怒哀乐
+* 人生最重要的时刻就是你突然发现自己是错的那一刻，是你转变观念的那一刻。人的意识太深了，为了维护自己的意识人类可以做出很多可怕的事情，如果你能从根本发现自己原来没有那么对，整个人生进程都会有质的改变。——李诞
+* 人来最爱什么？自由和自我。违背人类本性的关系都很难快乐，也很难持久。
+<!--* 2019是给幸福的人过的，幸福的人会更加幸福，悲惨的人只会更加悲惨。-->
+<!--* 北京的一天太短了，短到还没开始就结束了。-->
+<!--* 你真的缺席了太多我需要你的时刻-->
+<!--* 西藏是一种病，没来想尝试，来了无药可治-->
+* 我，一团火，灼人，也将自焚。——臧克家
+* 很多事 我能想通 也能接受 但我很难受
+* 我根本无法在这时间任何人身上得到所谓的情感来慰藉心灵，我全部的爱 皆来自于我的臆想
+* 这个世界 看你笑话的人 永远比在乎你的多 
+* 笑给你讨厌的人看 要多嚣张有多嚣张
+* 习惯了 是个很强大的词 可以代替所有的一言难尽
+* 放弃不难 但坚持很酷 你的负担将变成礼物 你受的苦将照亮你的路
+* 想结婚就去结婚，想单身的就继续单身 反正到最后也一样会后悔的 何必在意
+* 一万小时定律：人们眼中的天才之所以卓越非凡，并非天资超人一等，而是付出了持续不断的努力。一万小时的锤炼是任何人从平凡变成超凡的必要条件。
+* 精于审美的人，往往有独立的人格——她能看轻一般人所看重的，也能看重一般人所看轻的。
+* 嫉妒是一种变相的赞美 嫉妒也是一种变相的自卑
+* 不是假装沉默，只是无力诉说
+* 没有一个冬天不可逾越，没有一个春天不会来临
+* 不是不能吃苦，不是不能放下一切，可总是要有那么个值得的人。
+* 愿你三冬暖，愿你春不寒，愿你天黑有灯，下雨有伞，愿你一路上，有良人相伴。愿你所有快乐，无需假装。愿你此生尽兴，赤诚善良。愿时光能缓，愿故人不散；愿有人陪你颠沛流离，愿你惦念的人能和你道早安，愿你独闯的日子里不觉得孤单。愿你人间走一遭，圆满了三界六道，看透了是非善恶；从此福来心至，皆是逍遥。
+* 人生最困难的三件事：保守秘密，忘掉所受的创伤，充分利用余暇。——吉罗
+* 很多事介于不说委屈说了矫情之间。
+* 不如就利用孤单一人的时间，使自己变得更优秀，如刀劈斧凿一样雕刻自己，给别人一个惊喜，也给自己一个好的交代。
+* 阿德勒手帐中写道：幸福婚姻是这样的：你是我见过最好的人，你是最契合我的人，你是我眼里最优秀的人，你是我的灵魂伴侣，你是能给我保护的人，你是我的知心朋友，你是能分享我一切的人。  我们共同成长、相互照应，在最无助和软弱时候，你能托起我的下巴，扳指我的脊梁，令我坚强，并陪伴我左右，共同承受命运。  我们之间除了爱，还有肝胆相照的义气，不离不弃的默契，共同孕育的成长，以及铭心刻骨的恩情。
+* 每个人都以为自己所做的是对的，但每个人却不知道，自己也可能做着一件错事，错到需要别人的原谅。
+* 许多年里，我们原谅一个人，或是宽容一个人，不是与别人和解，而是与自己的一场和解。
+* 没人会记得你的苦，你要活得宽阔一些。
+* 我很难过 怎么翻译？ I'm fine.
+* 我抓不住这世间的美好 只能装作万事顺遂的模样
+* 希望来生，我没有梦想。
+* 任何关系，只要你想淡，我绝对成全。
