--- a/source/_posts/小情绪.md
+++ b/source/_posts/小情绪.md
@@ -1,8 +1,8 @@
 ---
-title: 收藏句子
+title: 小情绪
 date: 2018-02-02 15:45:09
 categories: 随笔
-tags: 
+tags: [小摘抄]
 toc:
 ---
 
@@ -390,4 +390,13 @@ toc:
 * 我很难过 怎么翻译？ I'm fine.
 * 我抓不住这世间的美好 只能装作万事顺遂的模样
 * 希望来生，我没有梦想。
+* 世界上有两件东西不能直视：一是太阳，二是人心。——东野圭吾
+* 所有渴望别人理解的行为都是弱者的行为，人的强大，第一步要学会孤独，第二步要学会不理解，第三步就是用结果去碾压。
+* 不用掩饰生命的狼狈，因为这是真实的。
+* 你只管往前走，碰到什么是什么——亦舒
+* 音乐只是给人一种美好，而现实总是让人唏嘘。
+* 酷的像风野的像狗，不招人爱倒也自由
 * 任何关系，只要你想淡，我绝对成全。
+* 《孤独是人生的修行》 《孤独是生命的礼物》 《百年孤独》
+* 镜花水月，终是虚幻，你羡慕我的恬淡，我好奇你的纷扰。
+* 每个人眼中更好的自己并不只有一种可能。不是这杯美式不好喝，只是它并不适合我。
