--- a/source/_posts/圣托里尼.md
+++ b/source/_posts/圣托里尼.md
@@ -15,3 +15,6 @@ toc:
 ![圣托里尼](/assets/20180811_Santorini/04.jpg)
 伊亚以日落景色最迷人。当黄昏，游人便会纷至沓来，威尼斯城堡或风车总是人满为患。因为在这里，才能欣赏到圣托里尼岛最著名的“日落爱琴海”的美景。 与费拉市一样，伊亚在临海的断崖上。那些建在悬崖上的蓝顶教堂与彩色小屋十分突出。这里也有无数精致的白色房屋，还有传统的希腊式风车，在柔和的夕阳照耀下令人迷醉。伊亚是费拉市西北尽头的一个美丽城镇，位于圣托里尼岛北面，从费拉市可乘巴士直达。爱悠闲宁静的人不妨在这里多住几天。
 ![圣托里尼](/assets/20180811_Santorini/05.jpg)
+
+
+世界上有三座蓝城，圣托里尼，摩洛哥，突尼斯。（如果用纯净来形容一个地方）
