--- a/source/_posts/小情绪.md
+++ b/source/_posts/小情绪.md
@@ -9,6 +9,34 @@ toc:
 <center>![收藏](/assets/20180202_shoucang/shoucang1.jpg)</center>
 <!--carol  lucca karol  cassie charis Claire Colleen Coral Cori Cynthia Corrie Iris Jessica Jessie Gillian Kate Laura-->
 
+## 始料未及
+> 你如果认识从前的我,也许你会原谅现在的我。                              ——张爱玲《倾城之恋》
+* 如果你认识从前的我，也许你会纳闷现在的我怎么胖成这逼样了。——张爱玲
+
+> 如果你给我的，和你给别人的是一样的，那我就不要了。   ——三毛
+* 如果你给我的，和你给别人的是一样的，那你挺够意思的。——三毛
+
+> 春风十里，不如你。         ——冯唐
+* 春风十里，那就是五千米。——冯唐
+<!--more-->
+> 我们站着，不说话，就十分美好。      ——顾城
+* 我们站着，不说话，场面一度很尴尬。——顾城
+
+> 每一个不曾起舞的日子，都是对生命的辜负。  ——尼采
+* 每一个不曾起舞的日子，都是感冒了蹦不动迪。——尼采
+
+> 听过很多道理 却依然过不好这一生。——韩寒
+* 听过很多道理 关键是没记住啊。——韩寒
+
+> 在有生的瞬间能遇见你，竟花光我所有的运气——林夕
+* 有生之年能遇到你，竟花光我三个月生活费和黄牛票。——林夕
+
+> 你走，我不送你。你来，无论多大风多大雨，我要去接你。     ——梁实秋
+* 你走，我不送你，你来，风雨交加，我接不接你心里没点B数吗——梁实秋
+
+> 哪里会有人喜欢孤独,不过是不喜欢失望。       ——村上春树《挪威的森林》
+*  哪里会有人喜欢孤独,不过是没钱出去玩罢了。——村上春树
+
 
 ## 那些很文艺的句子
 ----------------------
@@ -16,7 +44,6 @@ toc:
 
 * 我已亭亭，无忧亦无惧。
 * 永远年轻，永远热泪盈眶，永远在路上。
-<!--more-->
 * 不乱于心，不困于情，不惧未来，不念过往。
 * 生命来来往往，来日并不方长。
 * 生命中的全部偶然，其实都是命中注定。
@@ -262,7 +289,6 @@ toc:
 * 谈恋爱时，作死的程度不要超过漂亮的程度，人际交往中，耿直的程度不要超过能力的限度
 * 遇见强势的人要示弱，遇见自卑的人要尊重，遇见有趣的人要勾搭
 * 爱没有别的愿望，只要成全自己。
-* 我们听过无数的道理，却仍旧过不好这一生。
 * 多少有些遗憾提起来满是心酸，不说又怕自己会忘记。好像有的往事，久了，也只是故事了。
 * 有时候有些人有些事，我们除了说再见，别无选择。
 * 最近日子和我都有些难过，什么都不说就好。
@@ -307,7 +333,6 @@ toc:
 * 一个人的生活，没牵挂，没感动，没惊喜，也没失望。
 * 所谓节日，就是让快乐的人更快乐，孤单的人更孤单的日子。
 * 我现在，除了别人觉得不好，再没什么不好。
-* 平和自在。
 * 当你因为太过迷茫，太过偏执，以至于曲解了梦想和责任，不如先学会生活。——皮囊
 * 难熬的日子里，什么也没说，所以以后，也不必说。
 * 生活真是糟透了，烂透了，没得救。
@@ -400,3 +425,32 @@ toc:
 * 《孤独是人生的修行》 《孤独是生命的礼物》 《百年孤独》
 * 镜花水月，终是虚幻，你羡慕我的恬淡，我好奇你的纷扰。
 * 每个人眼中更好的自己并不只有一种可能。不是这杯美式不好喝，只是它并不适合我。
+* 这世界是块冰，就让它是块冰。
+* 心若静，风奈何。
+* 如果每件事情都自愿的，那么事情就简单多了
+* 执着于快乐，便不快乐
+* 就好像是，人这一辈子，总有得不到的东西。
+* 专情，孤傲，只暖喜欢的人，只把感情用在对的人身上。
+* 人性这种东西，不可言，不可研，不可验。
+* 岁月不饶人，我亦未曾饶过岁月。
+* 生活的最佳状态 是冷冷清清得风风火火。
+* 喜欢有什么用，你连我今天高兴还是难过都不知道。
+* 你要做一个不动声色的大人，自己去过另外的生活，不是所有的鱼，都生活在同一片海里。
+* 勇敢的接纳爱，承担责任，却不在爱与责任终沉迷。
+* 有些事不去经历永远都觉得是美好的，走进去了才发现，你以为的美好不过是隔着一层纱。（但我还是希望由我自己去揭开那层纱）
+* 女孩子就是要狠狠美一回，再狠狠失望一回，才能转身扑通一个猛子，扎进生活。
+* 你快乐过生活，我拼命去生存。
+* 喜欢就争取，得到就珍惜，错过就忘记。
+* 做一个寡言的人，却心里有一片海的人，不伤人伤己，于淡泊中，平和自在
+* 三公里专治各种不爽，五公里专治各种内伤，十公里跑完内心完全是坦然和善良，感恩活着真好。
+* 反正我们都是活一天少一天的人了
+* 我不希望这场旅行太过于轻松和容易，我觉得经历苦难和遭遇挫折坎坷，是人生一大财富，无人能懂，也无需人懂，做自己就好。
+* 留住一个人的从来不是卑微，而是活得出色和独立。
+* 这座城市叫北京，挤不完的地铁，吃不完的外卖，还有交不完的房租和熬不完的夜。
+* 抛硬币，并不是因为它总能给出对的答案，而是在你把它抛在空中的那一秒里，你自己心里就会告诉你真正想选的是什么
+* 这世界上没有人可以伤害你，除非你同意
+* 所有的旅行，见天地，见众生，不过是为了见自己
+* 大自然本就充满细节，是人类自己选择忽略
+* 睡前原谅一切，醒后不问过往
+* 人生总要勇敢一次，去做你真正想做的事
+* 连哭都怕失礼
