--- a/source/_posts/小情绪.md
+++ b/source/_posts/小情绪.md
@@ -2,12 +2,11 @@
 title: 小情绪
 date: 2018-02-02 15:45:09
 categories: 随笔
-tags: [小摘抄]
+tags: [list]
 toc:
 ---
 
 <center>![收藏](/assets/20180202_shoucang/shoucang1.jpg)</center>
-<!--carol  lucca karol  cassie charis Claire Colleen Coral Cori Cynthia Corrie Iris Jessica Jessie Gillian Kate Laura-->
 
 ## 始料未及
 > 你如果认识从前的我,也许你会原谅现在的我。                              ——张爱玲《倾城之恋》
@@ -454,3 +453,5 @@ toc:
 * 睡前原谅一切，醒后不问过往
 * 人生总要勇敢一次，去做你真正想做的事
 * 连哭都怕失礼
+* 以前我特别喜欢下雪天，因为可以打雪仗，但现在我很怕下雪，因为我怕上班迟到，是我变了，还是雪不一样了
+
