--- a/source/_posts/小摘抄.md
+++ b/source/_posts/小摘抄.md
@@ -10,6 +10,10 @@ toc:
 * 但也还是无法讨厌上海，尽管这个又冷又湿的冬天那么准确的描绘了我和身边的朋友们正在经历的这一段人生，很难，甚至有些丑陋，每一滴雨都真实可感，所有问题都是散布在裤腿上的泥渍，等我们用一把细毛刷，一点一点刷掉。
 <!--more-->
 
+* 酒足饭饱，你再身边，这就是我能想到的美好生活。我身边有个姑娘结婚之后，就把微信个人签名改成了："终于不再需要食物给我安全感。"当时看得我还挺感动，然后顺手又往嘴里塞了块曲奇饼干，特别喜欢吃东西，很多时候是因为觉得无聊。
+
+* 你没必要一次就吃撑，辜负了肉也辜负了胃，留个念想不好吗，你年纪轻轻早该懂，爱恨和吃饱，都要有分寸；你最爱吃的章鱼小丸子没有了，多往前走几步，还有糖炒栗子，榴莲酥，糖葫芦，烤地瓜，我知道你留着肚子给小丸子，但是，以后的路还要走，总要填饱肚子。
+
 
 ## 自省
 * 起初笑是心情，后来笑是表情
