--- a/source/_posts/收集.md
+++ b/source/_posts/收集.md
@@ -70,6 +70,7 @@ toc:
 * [圣托里尼](https://guchunli.github.io/2018/08/11/圣托里尼/)
 * 蓝月谷（云南）
 * 紫霞殿（云南）
+* 梵净山（贵州）
 * 巴音布鲁克（新疆）
 * 长岛 九丈崖（烟台）
 * 仙本那（马来西亚）
