--- a/source/_posts/小情绪.md
+++ b/source/_posts/小情绪.md
@@ -456,4 +456,4 @@ toc:
 * 以前我特别喜欢下雪天，因为可以打雪仗，但现在我很怕下雪，因为我怕上班迟到，是我变了，还是雪不一样了
 * 很多时候我们不幸福，就是对外界寄予太多的渴望，一旦落空，就会剩下满满的失落。
 * 在喜怒哀乐间走走停停，不知道在下一秒会遇见谁，会发生什么，只知道，阳光这么好，不要辜负了今天
-* 
+* 在这个世界上一定有另一个人我，做着你不敢做的事，过着你想过的生活，并且跟喜欢的人在——蓝另一种蓝
