--- a/source/_posts/小摘抄.md
+++ b/source/_posts/小摘抄.md
@@ -7,10 +7,21 @@ tags: [list]
 toc:
 ---
 
+<center>![""](/assets/imgs/zhaichao.png)</center> 
+
 * 但也还是无法讨厌上海，尽管这个又冷又湿的冬天那么准确的描绘了我和身边的朋友们正在经历的这一段人生，很难，甚至有些丑陋，每一滴雨都真实可感，所有问题都是散布在裤腿上的泥渍，等我们用一把细毛刷，一点一点刷掉。
 <!--more-->
 
 * 酒足饭饱，你再身边，这就是我能想到的美好生活。我身边有个姑娘结婚之后，就把微信个人签名改成了："终于不再需要食物给我安全感。"当时看得我还挺感动，然后顺手又往嘴里塞了块曲奇饼干，特别喜欢吃东西，很多时候是因为觉得无聊。
+
+* 总觉得什么事都要有意义，这是人类的恶习——伊坂幸太郎
+* 我的人生就是不断扩大的一塌糊涂。——马修·麦康纳《真探》
+* “妈的，我脸上怎么有水？”——苏茜《了不起的麦瑟尔夫人》
+* 世界上只有一种真正的英雄主义，那就是在认清生活的残酷真相后依然热爱它”。——罗曼·罗兰
+* “只要还活着，就不会有坏结局，我们仍然在故事的中途。”——德永《火花》
+* “这个世界让我感到挫败，但我还不想离开。”——奥丽芙《奥丽芙基特里奇》
+
+* I do not know where to go,but I have been on the road. 我不知道将去何方，但我已在路上。——《千与千寻》
 
 ```
 突然有一天，他不联系你了。
@@ -57,8 +68,3 @@ toc:
 
 希望你好好吃饭，好好恋爱，好好工作，好好学习，天天向上。
 ```
-
-
-## 自省
-* 起初笑是心情，后来笑是表情
-* 不是很贵，但是很对胃
