--- a/source/_posts/收集.md
+++ b/source/_posts/收集.md
@@ -7,56 +7,14 @@ tags: [list]
 toc:
 ---
 
-
-# 书单
-## to do
-* 豆瓣 60
-* 《活着》——余华
-* 《平凡的世界》
-* 《人间失格》——
-* 《皮囊》
-* 《百年孤独》
-<!--more-->
-* 《我是猫》
-* 《乌合之众》——古斯塔夫勒庞
-* 《遇见未知的自己》
-* 《苏菲的世界》
-* 《月亮与六便士》
-* 《少有人走的路4》
-* 《麦田里的守望者》
-* 《当下的力量》
-* 《果壳中的宇宙》
-* 《枪炮、病菌与钢铁》
-* 《霍乱时期的爱情》
-* 《围城》
-* 《王阳明心学》
-* 《你是世界写给我的情书》
-* 《人性的弱点》
-* 《二十几岁，没有十年》
-* 《追风筝的人》
-* 《极简力》
-* 《摆渡人》
-* 《姥姥语录》
-* 《我们仨》
-* 《灵魂有香气的女子》
-* 《龙应台 人生三书》
-* 《借山而居》
-* 《爱你时有风》
-* 古希腊罗马神话故事
-
-
-## done
-* 《每个人都是一座孤岛》
-* 《厚黑学》
-* 《看见》
-
+<center>!["抽象画"](/assets/imgs/xiaosi.png)</center> 
 
 # 剧单
 * 《超体》
 * 《W两个世界》
 * 《天空之上三公尺》
 * 《大小谎言》
-
+<!--more-->
 
 # 歌单
 * 《We can't stop》
@@ -64,6 +22,8 @@ toc:
 * 《right now》
 * 《Natural》
 * 《soap》
+* 《blow me a kiss》
+* 《staring at you》
 
 
 # 旅游收集
