--- a/source/_posts/随记.md
+++ b/source/_posts/随记.md
@@ -12,6 +12,7 @@ toc:
 拿铁=1份浓缩咖啡+1.5份热牛奶+0.5份奶泡
 摩卡=1份浓缩咖啡+1份热牛奶+0.5份鲜奶油+0.5份巧克力酱
 玛奇朵=1份浓缩咖啡+0.5份奶泡
+<!--more-->
 
 ### 化妆
 悦诗风吟，爱丽小屋，NARS,MAC,YSL,Dior,ARMANI,CHENEL,GIVENCHY,CPB,TF
