--- a/source/_posts/小情绪.md
+++ b/source/_posts/小情绪.md
@@ -1,4 +1,4 @@
----
+ ---
 title: 小情绪
 date: 2018-02-02 15:45:09
 categories: 随笔
@@ -6,7 +6,7 @@ tags: [list]
 toc:
 ---
 
-<center>![收藏](/assets/20180202_shoucang/shoucang1.jpg)</center>
+<center>![收藏](/assets/imgs/shoucang1.jpg)</center>
 
 ## 始料未及
 > 你如果认识从前的我,也许你会原谅现在的我。                              ——张爱玲《倾城之恋》
@@ -34,13 +34,12 @@ toc:
 * 你走，我不送你，你来，风雨交加，我接不接你心里没点B数吗——梁实秋
 
 > 哪里会有人喜欢孤独,不过是不喜欢失望。       ——村上春树《挪威的森林》
-*  哪里会有人喜欢孤独,不过是没钱出去玩罢了。——村上春树
+*  哪里会有人喜欢孤独,不过是没钱出去玩罢了。——村上春树《挪威的森林》
 
 
 ## 那些很文艺的句子
 ----------------------
 * 人间烟火，山河远阔。 无一是你，无一不是你。
-
 * 我已亭亭，无忧亦无惧。
 * 永远年轻，永远热泪盈眶，永远在路上。
 * 不乱于心，不困于情，不惧未来，不念过往。
@@ -67,30 +66,6 @@ toc:
 
 * 你不愿意种花，你说，“我不愿意看见它，一点点凋落”，是的，为了避免结束，你避免了一切开始。——顾城《避免》 
 * 你看这字里行间，年复一年，春光不必趁早，冬霜不会迟到，相聚别离，都是刚刚好。 ​​​​
-
-### 沈三废《每个人都是一座孤岛》
-* 我们遇见很多人，和很多人分开，又和很多人再相遇。大家都一样，没有什么不同，一样的孤单，一样的幸福。
-* 人生来是寂寞的，赤条条来到这个陌生的世界上，行走一世，最后又孤单地走了，如同幻梦一般。人们说，每个人都是一座孤岛，快乐着自己的快乐，痛苦着自己的痛苦，与这个世界无关。我是这句话的信徒。
-* 总要经历一段活在自己世界中的时刻，在那里才能明白自己最想要的是什么，没了那些遮盖双眼的迷雾，一切都变得清晰起来。
-* 喜欢一个人，就会没来由的自卑。从来粗心大意的自己，开始变得小心翼翼。每一天都做心理斗争，每一天都想着放弃，可却每一天都坚持下来。懦弱和勇敢，原来只隔着一层喜欢。
-* 愿你终有一天，所有压抑的烦恼，说不出的痛楚，难于表达的情感，都能毫不掩盖发泄出来。你会发现，原来生活也能这么美丽，就连那些不堪的东西，都变得越发璀璨起来。
-* 逆着光前行，总会经历比别人困难的事情。在困难中逆行，才造就了世界上独一无二的你。
-* 有的时候，我喜欢就这样安静地坐着看一旁忙碌的城市，仿佛自己不是城市中的一员，我只是个看客。看他们行色匆匆，看他们悲伤与狂喜，看他们面无表情的样子。
-* 记忆被时间绑架，回忆被心软美化，最终只留下了你的好。
-* 时间就是让你觉得走得好慢，可是不经意间又快到让你无法接受。
-* 岁月漫长，分离总会再次相遇，误会也会慢慢澄清，孤零零的你也总有一天会得到归宿。命运已把所有都规划好，该会好的总会好。
-* 于是渐渐明白，能否享受一个人的时光，能否经营好人生这座孤岛，关键看内心。内心从容，便是一个人孤处，那也是最美的时光；内心孤单，便是处于闹市，那也是一群人的寂寞。那种依靠外物的刺激形成的欢愉，眨眼之间便烟消云散，最后都会是一个人品尝寂寞的滋味。
-* 趁着年轻，多走一走，走到那个只有在梦里才会出现的地方，去看那些想都想不出的艳丽风景。
-* 你可以用很长的一段时间去爱一个人，同样也可以努力忘掉他，长短与否，都是用心的结果。
-* 原地停留并不是一件不好的事，那些不被人仔细看过的风景，不被人注意的小美好，都藏在这些需要静下心来才能发现的时间里。
-* 愿你生活中处处充满笑容，不再有大风大浪的袭击，只有这小小静谧的美好。
-* 感觉是个骗子，它像是个没有长大的小孩，我行我素，想要离开，想要逃避，想要新鲜的地方和新鲜的面孔，可是最后又会后悔，希望时光倒流。
-* 肯定是真挚过的，那些说出来的话在那一刻必定是诚意满满的。只是最后，时光亏欠了承诺，你也慢慢离开了我。
-* 心事随着时间慢慢变冷，不再喜欢复杂轰轰烈烈的感情，能简单干脆表达爱即可，反正都一样，爱能有什么不同。
-* 很羡慕鸟儿，它们想去哪里拍拍翅膀就能飞去，说走就走。不像我们，人还在，心却走了。
-* 因为不喜欢说再见，所以逃得快，用所有的行动去避开结局，就以为不会结束。
-* 刚走到最后再回首，身边已经没有来时伴。丢在人生旅途中的人，不好找，也寻不回。
-* 他们是过去的人，就该让他们活在回忆里。
 
 ## 那些很喜欢的句子
 ----------------------
@@ -362,36 +337,27 @@ toc:
 * 总不能还没努力就向生活妥协吧
 * 你真的得碰到那个你能降得住又能降得住你的人，才算合适，彼此爱慕又互相嫌弃，要不然这一辈子，该是多么无趣又无欲。
 * 我们最终都要远行，最终都要与稚嫩的自己告别，告别是通向成长的苦行之路。
-* 因为无能为力 所以顺其自然
 * 长大后才发现，生活还是需要一点演技。
 * 难过怎能讲的清楚，失落怎能感同身受。
 * 我会记住生命中不期而遇的温暖，我也记得大雨滂沱没有伞的日子。
-* 生活和电影不一样，生活难多了。
-* 以笑的方式哭，在死亡的伴随下活着。——《活着》
-* 人类无法承受太多的真实。——《活着》
-* 没有什么比时间更有说服力了，因为时间无需通知我们就可以改变一切。——《活着》
-* 人这一生，一定要明白一些道理，比如活着要开心，要快乐。——《活着》
-* 活着是自己去感受活着的幸福和辛苦、无聊和平庸；幸存，不过是旁人的评价罢了。——《活着》
 * 若干年后，你也经历了一些人事，也有了一些只能在失眠的夜里独自咀嚼的故事。你青涩褪尽，渐渐懂了生之可忧死之可怖。你终于也明白并且心平气和的接受了他不过是个平凡的人，与其他甲乙丙丁并没有什么本质的不同。可是 说不清楚为什么，你还是有所眷恋，像是一种迷信，庙宇塌毁了，神还是神。
 * 成年人的世界 就是应该果断又干脆 不耽误任何人 不消耗任何人 不浪费任何人 这是一种善良
 * 他若喜欢你，你脾气再大都叫个性，他若不喜欢你，就算你温顺的像只猫，他都嫌你掉毛。
 * 总要有些随风，有些入梦，有些长留在心中。
 * 愿你一生温暖纯良，不舍爱与自由。
 * 记住了 自己喜欢的东西 就不要问别人好不好看 喜欢胜过所有道理 原则抵不过我乐意
-* 想做什么就去做吧 每一个犹豫不决的挣扎 都是对人生最大的浪费——《不认命 就拼命》
 * 你要学着无论遇到什么事情 欣喜 悲伤或是濒临崩溃 都能够不动声色自己处理事情 自己辨别对错 好好成长
-* 人们去远方只是为了紧紧地搂住自己 我只喜欢在笛声中闻着野草的清香
 * 像他明天就会来一样期待 像他永远不会来一样生活——张爱玲
 * 我们终其一生的努力 真正能够把握的也不过是自己的喜怒哀乐
 * 人生最重要的时刻就是你突然发现自己是错的那一刻，是你转变观念的那一刻。人的意识太深了，为了维护自己的意识人类可以做出很多可怕的事情，如果你能从根本发现自己原来没有那么对，整个人生进程都会有质的改变。——李诞
-* 人来最爱什么？自由和自我。违背人类本性的关系都很难快乐，也很难持久。
+* 人生来最爱什么？自由和自我。违背人类本性的关系都很难快乐，也很难持久。
 <!--* 2019是给幸福的人过的，幸福的人会更加幸福，悲惨的人只会更加悲惨。-->
 <!--* 北京的一天太短了，短到还没开始就结束了。-->
 <!--* 你真的缺席了太多我需要你的时刻-->
 <!--* 西藏是一种病，没来想尝试，来了无药可治-->
 * 我，一团火，灼人，也将自焚。——臧克家
 * 很多事 我能想通 也能接受 但我很难受
-* 我根本无法在这时间任何人身上得到所谓的情感来慰藉心灵，我全部的爱 皆来自于我的臆想
+* 我根本无法在这世间任何人身上得到所谓的情感来慰藉心灵，我全部的爱 皆来自于我的臆想
 * 这个世界 看你笑话的人 永远比在乎你的多 
 * 笑给你讨厌的人看 要多嚣张有多嚣张
 * 习惯了 是个很强大的词 可以代替所有的一言难尽
@@ -400,8 +366,6 @@ toc:
 * 一万小时定律：人们眼中的天才之所以卓越非凡，并非天资超人一等，而是付出了持续不断的努力。一万小时的锤炼是任何人从平凡变成超凡的必要条件。
 * 精于审美的人，往往有独立的人格——她能看轻一般人所看重的，也能看重一般人所看轻的。
 * 嫉妒是一种变相的赞美 嫉妒也是一种变相的自卑
-* 不是假装沉默，只是无力诉说
-* 没有一个冬天不可逾越，没有一个春天不会来临
 * 不是不能吃苦，不是不能放下一切，可总是要有那么个值得的人。
 * 愿你三冬暖，愿你春不寒，愿你天黑有灯，下雨有伞，愿你一路上，有良人相伴。愿你所有快乐，无需假装。愿你此生尽兴，赤诚善良。愿时光能缓，愿故人不散；愿有人陪你颠沛流离，愿你惦念的人能和你道早安，愿你独闯的日子里不觉得孤单。愿你人间走一遭，圆满了三界六道，看透了是非善恶；从此福来心至，皆是逍遥。
 * 人生最困难的三件事：保守秘密，忘掉所受的创伤，充分利用余暇。——吉罗
@@ -410,50 +374,82 @@ toc:
 * 阿德勒手帐中写道：幸福婚姻是这样的：你是我见过最好的人，你是最契合我的人，你是我眼里最优秀的人，你是我的灵魂伴侣，你是能给我保护的人，你是我的知心朋友，你是能分享我一切的人。  我们共同成长、相互照应，在最无助和软弱时候，你能托起我的下巴，扳指我的脊梁，令我坚强，并陪伴我左右，共同承受命运。  我们之间除了爱，还有肝胆相照的义气，不离不弃的默契，共同孕育的成长，以及铭心刻骨的恩情。
 * 每个人都以为自己所做的是对的，但每个人却不知道，自己也可能做着一件错事，错到需要别人的原谅。
 * 许多年里，我们原谅一个人，或是宽容一个人，不是与别人和解，而是与自己的一场和解。
-* 没人会记得你的苦，你要活得宽阔一些。
 * 我很难过 怎么翻译？ I'm fine.
-* 我抓不住这世间的美好 只能装作万事顺遂的模样
-* 希望来生，我没有梦想。
 * 世界上有两件东西不能直视：一是太阳，二是人心。——东野圭吾
 * 所有渴望别人理解的行为都是弱者的行为，人的强大，第一步要学会孤独，第二步要学会不理解，第三步就是用结果去碾压。
-* 不用掩饰生命的狼狈，因为这是真实的。
-* 你只管往前走，碰到什么是什么——亦舒
-* 音乐只是给人一种美好，而现实总是让人唏嘘。
-* 酷的像风野的像狗，不招人爱倒也自由
-* 任何关系，只要你想淡，我绝对成全。
 * 《孤独是人生的修行》 《孤独是生命的礼物》 《百年孤独》
 * 镜花水月，终是虚幻，你羡慕我的恬淡，我好奇你的纷扰。
-* 每个人眼中更好的自己并不只有一种可能。不是这杯美式不好喝，只是它并不适合我。
-* 这世界是块冰，就让它是块冰。
-* 心若静，风奈何。
-* 如果每件事情都自愿的，那么事情就简单多了
-* 执着于快乐，便不快乐
-* 就好像是，人这一辈子，总有得不到的东西。
 * 专情，孤傲，只暖喜欢的人，只把感情用在对的人身上。
 * 人性这种东西，不可言，不可研，不可验。
-* 岁月不饶人，我亦未曾饶过岁月。
-* 生活的最佳状态 是冷冷清清得风风火火。
 * 喜欢有什么用，你连我今天高兴还是难过都不知道。
-* 你要做一个不动声色的大人，自己去过另外的生活，不是所有的鱼，都生活在同一片海里。
 * 勇敢的接纳爱，承担责任，却不在爱与责任终沉迷。
 * 有些事不去经历永远都觉得是美好的，走进去了才发现，你以为的美好不过是隔着一层纱。（但我还是希望由我自己去揭开那层纱）
 * 女孩子就是要狠狠美一回，再狠狠失望一回，才能转身扑通一个猛子，扎进生活。
 * 你快乐过生活，我拼命去生存。
 * 喜欢就争取，得到就珍惜，错过就忘记。
 * 做一个寡言的人，却心里有一片海的人，不伤人伤己，于淡泊中，平和自在
-* 三公里专治各种不爽，五公里专治各种内伤，十公里跑完内心完全是坦然和善良，感恩活着真好。
-* 反正我们都是活一天少一天的人了
-* 我不希望这场旅行太过于轻松和容易，我觉得经历苦难和遭遇挫折坎坷，是人生一大财富，无人能懂，也无需人懂，做自己就好。
 * 留住一个人的从来不是卑微，而是活得出色和独立。
+* 连哭都怕失礼
+* 最惬意的幸福是在柴米油盐酱醋茶下也能安然自得，也能浪漫随心，也能充盈生活，也能陪伴如初
+
+* 人生的路，有时候走着走着才开阔起来的
+* 你只管往前走，碰到什么是什么——亦舒
+* 你要做一个不动声色的大人，自己去过另外的生活，不是所有的鱼，都生活在同一片海里。
+* 我不希望这场旅行太过于轻松和容易，我觉得经历苦难和遭遇挫折坎坷，是人生一大财富，无人能懂，也无需人懂，做自己就好。
+* 当我们不能改变的时候，唯有改变自己，所有的不快乐来自于自己的欲望
+* 如果你不喜欢某件事，就改变它，如果你不能改变它，就改变你的态度，不要抱怨
+* 以前我特别喜欢下雪天，因为可以打雪仗，但现在我很怕下雪，因为我怕上班迟到，是我变了，还是雪不一样了
+* 以年轻的名义，奢侈地干几桩坏事，然后在三十岁之前及时回头、改正，从此褪下幼稚的外衣，将智慧带走 然后，要做一个合格的人，开始担负，开始顽强地爱着生活——张爱玲
 * 这座城市叫北京，挤不完的地铁，吃不完的外卖，还有交不完的房租和熬不完的夜。
 * 抛硬币，并不是因为它总能给出对的答案，而是在你把它抛在空中的那一秒里，你自己心里就会告诉你真正想选的是什么
+* 任何关系，只要你想淡，我绝对成全。
+* 如果每件事情都自愿的，那么事情就简单多了
 * 这世界上没有人可以伤害你，除非你同意
+* 生活的最佳状态 是冷冷清清得风风火火。
 * 所有的旅行，见天地，见众生，不过是为了见自己
+* 人们去远方只是为了紧紧地搂住自己 我只喜欢在笛声中闻着野草的清香
 * 大自然本就充满细节，是人类自己选择忽略
-* 睡前原谅一切，醒后不问过往
+* 风能吹起一张白纸，却无法吹走一只蝴蝶，因为生命的力量在于不顺从
+* 想做什么就去做吧 每一个犹豫不决的挣扎 都是对人生最大的浪费——《不认命 就拼命》
 * 人生总要勇敢一次，去做你真正想做的事
-* 连哭都怕失礼
-* 以前我特别喜欢下雪天，因为可以打雪仗，但现在我很怕下雪，因为我怕上班迟到，是我变了，还是雪不一样了
-* 很多时候我们不幸福，就是对外界寄予太多的渴望，一旦落空，就会剩下满满的失落。
 * 在喜怒哀乐间走走停停，不知道在下一秒会遇见谁，会发生什么，只知道，阳光这么好，不要辜负了今天
+* 去做你想做的事，趁阳光正好，微风不燥，你还未老
 * 在这个世界上一定有另一个人我，做着你不敢做的事，过着你想过的生活，并且跟喜欢的人在——蓝另一种蓝
+
+* 睡前原谅一切，醒后不问过往
+* 很多时候我们不幸福，就是对外界寄予太多的渴望，一旦落空，就会剩下满满的失落。
+* 在这个城市中行走，总要带着一丝二百五的脾气，加上阿Q的自我精神战胜法，才能活得好、活得快乐，这世界从不缺怨妇，也不缺灰色，缺的是女神外表、爷们儿心的女人，你不努力，谁也给不了你想要的生活
+* Do what you love,not what you think you're supposed to do.
+* 当你思考什么是对什么是错，你就注定得不到你想要的结果
+* 我原谅所有，I forgive all。
+* 此去经年，天涯路远。
+* 不是假装沉默，只是无力诉说
+* 没有一个冬天不可逾越，没有一个春天不会来临
+* 我抓不住这世间的美好 只能装作万事顺遂的模样
+* 因为无能为力 所以顺其自然
+* 没人会记得你的苦，你要活得宽阔一些。
+* 希望来生，我没有梦想。
+* 不用掩饰生命的狼狈，因为这是真实的。
+* 酷的像风野的像狗，不招人爱倒也自由
+* 这世界是块冰，就让它是块冰。
+* 心若静，风奈何。
+* 就好像是，人这一辈子，总有得不到的东西。
+* 每个人眼中更好的自己并不只有一种可能。不是这杯美式不好喝，只是它并不适合我。
+* 岁月不饶人，我亦未曾饶过岁月。
+* 执着于快乐，便不快乐
+* 三公里专治各种不爽，五公里专治各种内伤，十公里跑完内心完全是坦然和善良，感恩活着真好。
+* 音乐只是给人一种美好，而现实总是让人唏嘘。
+* 生活和电影不一样，生活难多了。
+* 一个人出来会遇到一群人，一群人也会感染一个人
+* 恋爱是一种选择，独身也是
+* 熬夜，是因为没有勇气结束这一天 赖床，是因为没有激情开始这一天 好好睡一觉 把心里的垃圾倒一倒
+* 我愿意像茶，把苦涩留在心里，散发出来的都是清香——《独白》
+* 孤独是给你思考自己的时间，在一个人的日子里，你要做的只有一件事，把自己变得更优秀。
+* 荷尔蒙决定一见钟情，多巴胺决定天长地久，肾上腺决定出不出手，自尊心决定谁先开口，最后寿命和现实，决定谁先离开谁先走。
+* 人一旦习惯了孤独，才是比悲伤更悲伤的事
+* 爱情和陪伴是小孩子的，面包和生活才是成年人的。
+* 不管你承不承认，人确实是经历了一些事以后，就悄悄换了一种性格。
+* 时间并不会帮我们解决什么问题，它只是把原来怎么也想不通的问题，变得不再重要了。
+* 有人说，当你不再对某个东西或某件事过分期待的时候，也许它就来了像个惊喜一样
+* 改变，永远都不会太晚
+* 人生中无数错过就是错过，从来都只有今生、此时、此刻。
