--- a/source/_posts/小情绪.md
+++ b/source/_posts/小情绪.md
@@ -1,5 +1,6 @@
- ---
+---
 title: 小情绪
+copyright: true
 date: 2018-02-02 15:45:09
 categories: 随笔
 tags: [list]
@@ -7,6 +8,7 @@ toc:
 ---
 
 <center>![收藏](/assets/imgs/shoucang1.jpg)</center>
+<!--more-->
 
 ## 始料未及
 > 你如果认识从前的我,也许你会原谅现在的我。                              ——张爱玲《倾城之恋》
@@ -17,7 +19,6 @@ toc:
 
 > 春风十里，不如你。         ——冯唐
 * 春风十里，那就是五千米。——冯唐
-<!--more-->
 > 我们站着，不说话，就十分美好。      ——顾城
 * 我们站着，不说话，场面一度很尴尬。——顾城
 
