--- a/source/_posts/读书笔记.md
+++ b/source/_posts/读书笔记.md
@@ -8,14 +8,14 @@ toc:
 ---
 
 
-<center>![""](/assets/imgs/gufeng.jpeg)</center> 
+<center>![""](/assets/imgs/gufeng.jpg)</center> 
+<!--more-->
 
 # 书单
 ## to do
 * 豆瓣 60
 * 《平凡的世界》
 * 《百年孤独》
-<!--more-->
 * 《我是猫》
 * 《乌合之众》——古斯塔夫勒庞
 * 《遇见未知的自己》
