--- a/source/_posts/小情绪.md
+++ b/source/_posts/小情绪.md
@@ -438,7 +438,7 @@ toc:
 * 每个人眼中更好的自己并不只有一种可能。不是这杯美式不好喝，只是它并不适合我。
 * 岁月不饶人，我亦未曾饶过岁月。
 * 执着于快乐，便不快乐
-* 三公里专治各种不爽，五公里专治各种内伤，十公里跑完内心完全是坦然和善良，感恩活着真好。
+* 三公里专治各种不爽，五公里专治各种内伤，十公里跑完百毒不侵，满是坦然。
 * 音乐只是给人一种美好，而现实总是让人唏嘘。
 * 生活和电影不一样，生活难多了。
 * 一个人出来会遇到一群人，一群人也会感染一个人
@@ -448,9 +448,22 @@ toc:
 * 孤独是给你思考自己的时间，在一个人的日子里，你要做的只有一件事，把自己变得更优秀。
 * 荷尔蒙决定一见钟情，多巴胺决定天长地久，肾上腺决定出不出手，自尊心决定谁先开口，最后寿命和现实，决定谁先离开谁先走。
 * 人一旦习惯了孤独，才是比悲伤更悲伤的事
+* 上天借由各种途径使人变得孤独，好让我们可以走向自己。
 * 爱情和陪伴是小孩子的，面包和生活才是成年人的。
 * 不管你承不承认，人确实是经历了一些事以后，就悄悄换了一种性格。
 * 时间并不会帮我们解决什么问题，它只是把原来怎么也想不通的问题，变得不再重要了。
 * 有人说，当你不再对某个东西或某件事过分期待的时候，也许它就来了像个惊喜一样
 * 改变，永远都不会太晚
 * 人生中无数错过就是错过，从来都只有今生、此时、此刻。
+* 将就不止存在于婚姻，还存在于单身，因为你没得选择。
+* 植根于内心的修养；无需提醒的自觉；以约束为前提的自由；为别人着想的善良。
+* 每个人都有自己的生活方式，这是一种选择，无可厚非。
+* 在别人的故事里，到最后都会有一个超级英雄来终结一切拯救世界，而我们的世界里，只有自己能拯救自己。
+* 遗憾的不是红绿灯，是那些数不清的犹豫。
+* 既然都是凡夫俗子，就要好好沉溺于生活。你总得把断浆划起来。
+* 其实这世上本没有什么启程，都是过程。时间把一切串起，不可分割。
+* 喜欢旅行不是因为有钱，而是不想老了以后后悔。风景确实会一直都在，但那颗年少轻狂的心终会消失
+* 得到的全是侥幸，失去的才是人生——《少年派》
+* 人最大的痛苦，来自无法接受命运的无常，以及生而为人的脆弱。
+* 你要不顾一切，让自己变得优秀，即使是在那些糟糕的日子里。
+* 人活这一辈子，最好的状态就是，轻装上阵，去感受这个世界的美好。
