--- a/source/_posts/收集.md
+++ b/source/_posts/收集.md
@@ -15,6 +15,9 @@ toc:
 * 《W两个世界》
 * 《天空之上三公尺》
 * 《大小谎言》
+* 《隐秘而伟大》
+* 《地球最后的夜晚》
+* 《迦百农》
 
 
 # 歌单
@@ -25,6 +28,10 @@ toc:
 * 《soap》
 * 《blow me a kiss》
 * 《staring at you》
+* 01.《Drip Drip Drip》[低落的星星]
+* 02.《Dance of Gossamer》[薄纱之舞]
+* 03.《Floating in the City》[城市漂流]
+* 26.《Intelligence of Infinity》[无尽的智慧]
 
 
 # 旅游收集
