--- a/source/_posts/读书笔记.md
+++ b/source/_posts/读书笔记.md
@@ -40,7 +40,33 @@ toc:
 * 《灵魂有香气的女子》
 * 《借山而居》
 * 《爱你时有风》
+* 《西西弗的神话》
 * 古希腊罗马神话故事
+* 《如何让你爱的人爱上你》
+* 《鬼谷子》
+* 《羊皮卷》
+* 《墨菲定律》
+* 《狼道》
+
+
+### 卢思浩
+#### 《愿有人陪你颠沛流离》
+* 今天能做的事不要等到明天，答应自己要去的地方就尽力去抵达。这个世界太危险，时间就该浪费在美好的事物上。——
+* 所谓的成长，就是越来越能接受自己本来的样子，也能更好的和孤单的自己，失落的自己，挫败的自己相处，并且接受它，然后面对它。
+
+#### 《你要去相信，没有到不了的明天》
+#### 《离开前请叫醒我》
+#### 《你也走了很远的路吧》
+#### 《想太多》
+
+### 孙宇晨
+#### 《这世界既残酷也温柔》
+
+### 张皓宸
+#### 《我与世界只差一个你》
+#### 《你是最好的自己》
+#### 《后来时间都与你有关》
+#### 《谢谢自己够勇敢》
 
 
 ## part
@@ -53,7 +79,7 @@ toc:
 * 没有什么比时间更有说服力了，因为时间无需通知我们就可以改变一切。——《活着》
 * 人这一生，一定要明白一些道理，比如活着要开心，要快乐。——《活着》
 * 活着是自己去感受活着的幸福和辛苦、无聊和平庸；幸存，不过是旁人的评价罢了。——《活着》
-
+### 《人性的弱点》——戴尔·卡耐基
 
 
 ## done
