--- a/source/_posts/随记.md
+++ b/source/_posts/随记.md
@@ -16,8 +16,12 @@ toc:
 
 ### 化妆
 悦诗风吟，爱丽小屋，NARS,MAC,YSL,Dior,ARMANI,CHENEL,GIVENCHY,CPB,TF
-香水：屋顶花园，尼罗河，柏林少女
+* 香水：屋顶花园，尼罗河，柏林少女
+* 面膜：敷尔佳面膜（祛痘）
 
+### 值得入手的微单相机
+* 尼康D5300 （2500）
+* 索尼A6000（3000）
 
 ### 别人的结婚清单
 1.彩礼（8万） 回礼（10万）
