--- a/source/_posts/小情绪.md
+++ b/source/_posts/小情绪.md
@@ -467,3 +467,6 @@ toc:
 * 人最大的痛苦，来自无法接受命运的无常，以及生而为人的脆弱。
 * 你要不顾一切，让自己变得优秀，即使是在那些糟糕的日子里。
 * 人活这一辈子，最好的状态就是，轻装上阵，去感受这个世界的美好。
+* 此身不向今生渡，更待何生渡此生
+* 承受越多明白越多
+* 无论你正经历着什么，过得是否开心，世界不会因为你的疲惫，而停下它的脚步，那些你不能释怀的人和事，总有一天会在你念念不忘之时早已遗忘，无论黑夜多么漫长不堪，黎明始终会如期而至，能力配不上野心是所有烦恼的根源，这个世界是公平的，你想要得到就得学会付出和坚持，每个人都可以通过自己的努力，去决定生活的样子。
