--- a/source/_posts/收集.md
+++ b/source/_posts/收集.md
@@ -31,7 +31,29 @@ toc:
 * 01.《Drip Drip Drip》[低落的星星]
 * 02.《Dance of Gossamer》[薄纱之舞]
 * 03.《Floating in the City》[城市漂流]
-* 26.《Intelligence of Infinity》[无尽的智慧]
+* 04.《Rising of the Deam》[梦起始的地方]
+* 05.《Dazing》[微醺]
+* 06.《A New Beginning》[全新的开始]
+* 07.《Smiling Memories》[回忆微微笑]
+* 08.《Tender Passion》[柔情]
+* 09.《Completely Vacant》[净空]
+* 10.《Infinite Vitality》[生机无限]
+* 11.《A Fairy In The Woods》[遇见林间精灵]
+* 12.《Awakening》[唤醒]
+* 13.《Mermaid》[美人鱼]
+* 14.《Ocean Blue》[像海一样蓝]
+* 15.《Diving Deep》[深浅]
+* 16.《Activation》[纤活]
+* 17.《You Look Lovely》[你曼妙的身影]
+* 18.《Have A Feeling In Love》[恋爱的预感]
+* 19.《Breeze In The Afternoon》[午后微风]
+* 20.《Intellectual Life》[智慧的生命]
+* 21.《Floating Space》[无限的想象力]
+* 22.《Brain》[大脑]
+* 23.《A Clear Head》[清晰的头脑]
+* 24.《Intellect》[智慧]
+* 25.《Knowledge》[知识]
+* 26.《Intelligence Of Infinity》[无尽的智慧]
 
 
 # 旅游收集
@@ -44,6 +66,7 @@ toc:
 * 仙本那（马来西亚）
 * 稻城亚丁，甘孜
 * 巴厘岛 天空之门
+* 承德 双塔山
 
 
 ## 句子收集
