--- a/source/_posts/小情绪.md
+++ b/source/_posts/小情绪.md
@@ -470,3 +470,5 @@ toc:
 * 此身不向今生渡，更待何生渡此生
 * 承受越多明白越多
 * 无论你正经历着什么，过得是否开心，世界不会因为你的疲惫，而停下它的脚步，那些你不能释怀的人和事，总有一天会在你念念不忘之时早已遗忘，无论黑夜多么漫长不堪，黎明始终会如期而至，能力配不上野心是所有烦恼的根源，这个世界是公平的，你想要得到就得学会付出和坚持，每个人都可以通过自己的努力，去决定生活的样子。
+* 最喜欢书后记里的一句话：一个人改变自己内心的最佳捷径是什么？改变自己的外在。
+* “跑超级马拉松不可能对你有什么好处，我想不出那种运动怎么会对身体有好处。”“对身体有好处？不，的确对身体没好处。可就算是你受伤了，也能痊愈。就算累着了，也能休息回来。关键是，当你跑完了50千米或者是160千米，当你跑过终点线的一刹那，你就不再是起跑线上的那个你了。”
