--- a/source/_posts/收集.md
+++ b/source/_posts/收集.md
@@ -18,6 +18,8 @@ toc:
 * 《隐秘而伟大》
 * 《地球最后的夜晚》
 * 《迦百农》
+* 《壁花少年》
+* 《灵魂摆渡-黄泉》
 
 
 # 歌单
@@ -28,6 +30,9 @@ toc:
 * 《soap》
 * 《blow me a kiss》
 * 《staring at you》
+* 《你为什么说谎》-丁当
+* 《生世》
+* 《诛仙青云志》
 * 01.《Drip Drip Drip》[低落的星星]
 * 02.《Dance of Gossamer》[薄纱之舞]
 * 03.《Floating in the City》[城市漂流]
@@ -58,8 +63,8 @@ toc:
 
 # 旅游收集
 * [圣托里尼](https://guchunli.github.io/2018/08/11/圣托里尼/)
-* 蓝月谷（云南）
-* 紫霞殿（云南）
+* 蓝月谷、紫霞殿、米勒（云南）
+* （云南）
 * 梵净山（贵州）
 * 巴音布鲁克（新疆）
 * 长岛 九丈崖（烟台）
