--- a/source/_posts/读书笔记.md
+++ b/source/_posts/读书笔记.md
@@ -48,6 +48,17 @@ toc:
 * 《墨菲定律》
 * 《狼道》
 * 《剑来》烽火戏诸侯
+* 《选择》
+* 《生活需要仪式感》
+* 《董卿：做一个有才情的女子》
+* 《断舍离》
+* 《所谓情商高，就是会说话》
+* 《蔡康永的情商课：为你自己活一次》
+* 《钝感力》
+* 《时间的礼物》
+* 《你要相信改变的力量》
+* 《好看的皮囊千篇一律，有趣的灵魂万里挑一》
+* 《天才在左疯子在右》
 
 
 ### 卢思浩
