--- a/source/_posts/随记.md
+++ b/source/_posts/随记.md
@@ -14,6 +14,9 @@ toc:
 玛奇朵=1份浓缩咖啡+0.5份奶泡
 <!--more-->
 
+### 原花青素含量
+红小豆、蓝莓、巧克力、草莓、白葡萄、富士苹果、紫葡萄
+
 ### 化妆
 悦诗风吟，爱丽小屋，NARS,MAC,YSL,Dior,ARMANI,CHENEL,GIVENCHY,CPB,TF
 * 香水：屋顶花园，尼罗河，柏林少女
