--- a/source/_posts/收集.md
+++ b/source/_posts/收集.md
@@ -20,6 +20,19 @@ toc:
 * 《迦百农》
 * 《壁花少年》
 * 《灵魂摆渡-黄泉》
+* 《何以为家》
+* 《sky》
+* 《大人物》
+* 《看不见的客人》
+* 《只有你》
+* 《最完美的离婚》
+## 孤独
+* 《她》
+* 《绿皮书》
+* 《超脱》
+* 《出租车司机》
+* 《心房客》
+* 《哑舍》
 
 
 # 歌单
@@ -30,9 +43,7 @@ toc:
 * 《soap》
 * 《blow me a kiss》
 * 《staring at you》
-* 《你为什么说谎》-丁当
-* 《生世》
-* 《诛仙青云志》
+* 《Higher》
 * 01.《Drip Drip Drip》[低落的星星]
 * 02.《Dance of Gossamer》[薄纱之舞]
 * 03.《Floating in the City》[城市漂流]
@@ -62,21 +73,29 @@ toc:
 
 
 # 旅游收集
-* [圣托里尼](https://guchunli.github.io/2018/08/11/圣托里尼/)
-* 蓝月谷、紫霞殿、米勒（云南）
-* （云南）
+## 国内
+* 蓝月谷、紫霞殿、米勒、香格里拉（云南）
 * 梵净山（贵州）
-* 巴音布鲁克（新疆）
-* 长岛 九丈崖（烟台）
-* 仙本那（马来西亚）
+* 巴音布鲁克、鹿角湾（新疆）
 * 稻城亚丁，甘孜
-* 巴厘岛 天空之门
+* 四川大邑西岭雪山阴阳界
 * 承德 双塔山
+* 敦煌 大地之子
+* 湖南 芙蓉古镇、凤凰古镇、张家界
+* 三亚、迪斯尼、桂林、西湖、神农架、长白山
+## 国外
+* [圣托里尼](https://guchunli.github.io/2018/08/11/圣托里尼/)
+* 仙本那（马来西亚）
+* 巴厘岛 天空之门
+* 柬埔寨 吴哥窟
+
+## done
+* 长岛 九丈崖（烟台）
 
 
 ## 句子收集
-[小情绪](https://guchunli.github.io/2018/02/02/小情绪/)
-[小摘抄](https://guchunli.github.io/2019/02/22/小摘抄/)
+[喜欢的句子](https://guchunli.github.io/2018/02/02/喜欢的句子/)
+[名言](https://guchunli.github.io/2019/02/22/名言/)
 
 
 # 英文名收集
@@ -124,7 +143,7 @@ Lucca
 
 * 眼保健操
 * 去浮肿：口味清淡，躺靠墙，空中自行车，西红柿，芹菜，香蕉
-* 波比跳，郑多燕，HIIT，tabate，insanity
+* 波比跳，郑多燕，HIIT，tabate，insanity，美丽芭蕾
 
 蹲起100
 仰卧起坐50
