--- a/source/_posts/读书笔记.md
+++ b/source/_posts/读书笔记.md
@@ -13,9 +13,10 @@ toc:
 
 # 书单
 ## to do
+* 严歌苓、村上春树
 * 豆瓣 60
-* 《平凡的世界》
-* 《百年孤独》
+* 《平凡的世界》——路遥
+* 《百年孤独》——马尔克斯
 * 《我是猫》
 * 《乌合之众》——古斯塔夫勒庞
 * 《遇见未知的自己》
@@ -51,6 +52,7 @@ toc:
 * 《选择》
 * 《生活需要仪式感》
 * 《董卿：做一个有才情的女子》
+* 《别在该动脑子的时候动感情》
 * 《断舍离》
 * 《所谓情商高，就是会说话》
 * 《蔡康永的情商课：为你自己活一次》
@@ -59,7 +61,26 @@ toc:
 * 《你要相信改变的力量》
 * 《好看的皮囊千篇一律，有趣的灵魂万里挑一》
 * 《天才在左疯子在右》
+* 《影响力》
+* 《我喜欢人生快活的样子》
+* 孤独三部曲：《孤独是人生的修行》 《孤独是生命的礼物》 《百年孤独》
+* 《吃掉那只青蛙》
+* 《黄金时代》
 
+### 书单1
+* 《娱乐至死》
+* 《被讨厌的勇气》
+* 《拆掉思维里的墙》
+* 《东京本屋》
+* 《独居的一年》
+* 《爸爸爸》——韩少功
+* 《不能承受的生命之轻》
+* 《巨河流》——齐邦媛
+* 《挪威的森林》——村上春树
+* 《情人》
+* 《人面桃花》——格非
+* 《解忧杂货铺》——东野圭吾
+* 《房思琪的初恋乐园》——林奕含
 
 ### 卢思浩
 #### 《愿有人陪你颠沛流离》
