--- a/source/_posts/喜欢的句子.md
+++ b/source/_posts/喜欢的句子.md
@@ -1,5 +1,5 @@
 ---
-title: 小情绪
+title: 喜欢的句子
 copyright: true
 date: 2018-02-02 15:45:09
 categories: 随笔
@@ -9,34 +9,6 @@ toc:
 
 <center>![收藏](/assets/imgs/shoucang1.jpg)</center>
 <!--more-->
-
-## 始料未及
-> 你如果认识从前的我,也许你会原谅现在的我。                              ——张爱玲《倾城之恋》
-* 如果你认识从前的我，也许你会纳闷现在的我怎么胖成这逼样了。——张爱玲
-
-> 如果你给我的，和你给别人的是一样的，那我就不要了。   ——三毛
-* 如果你给我的，和你给别人的是一样的，那你挺够意思的。——三毛
-
-> 春风十里，不如你。         ——冯唐
-* 春风十里，那就是五千米。——冯唐
-> 我们站着，不说话，就十分美好。      ——顾城
-* 我们站着，不说话，场面一度很尴尬。——顾城
-
-> 每一个不曾起舞的日子，都是对生命的辜负。  ——尼采
-* 每一个不曾起舞的日子，都是感冒了蹦不动迪。——尼采
-
-> 听过很多道理 却依然过不好这一生。——韩寒
-* 听过很多道理 关键是没记住啊。——韩寒
-
-> 在有生的瞬间能遇见你，竟花光我所有的运气——林夕
-* 有生之年能遇到你，竟花光我三个月生活费和黄牛票。——林夕
-
-> 你走，我不送你。你来，无论多大风多大雨，我要去接你。     ——梁实秋
-* 你走，我不送你，你来，风雨交加，我接不接你心里没点B数吗——梁实秋
-
-> 哪里会有人喜欢孤独,不过是不喜欢失望。       ——村上春树《挪威的森林》
-*  哪里会有人喜欢孤独,不过是没钱出去玩罢了。——村上春树《挪威的森林》
-
 
 ## 那些很文艺的句子
 ----------------------
@@ -65,9 +37,6 @@ toc:
 只要最后是你
 </center>
 
-* 你不愿意种花，你说，“我不愿意看见它，一点点凋落”，是的，为了避免结束，你避免了一切开始。——顾城《避免》 
-* 你看这字里行间，年复一年，春光不必趁早，冬霜不会迟到，相聚别离，都是刚刚好。 ​​​​
-
 ## 那些很喜欢的句子
 ----------------------
 * 我们毕生所求，不过是真爱和自由！
@@ -76,35 +45,6 @@ toc:
 * 生活最厉害的招数是用心，其次就是仪式感
 * 其实我们每个人都是胆小鬼，有这样那样畏首畏尾的时刻。希望每一个心有想法的人，都能打破舒适圈，去追求不可想象的漂泊生活，勇敢又智慧，自由又有钱。
 * 我们每个人，都有属于自己的生活方式，我欣赏你生活的浪漫热烈，你也无需质疑我的岁月静好。
-
-## 那些很有哲理的句子
-----------------------
-> 如果有来生，要做一棵树，站成永恒，没有悲欢的姿势。一半在土里安详，一半在风里飞扬，一半洒落阴凉，一半沐浴阳光，非常沉默，非常骄傲，从不依靠，从不寻找。     ——三毛
- 
- > 我相信生命，我相信尚未认识的你，因为总有一天你会成为我最爱的东西：空气，流水，植物，那个少年。     ——塞尔努达
- 
- > 所谓父母子女一场，不过意味着你和他的缘分就是今生今世不断地目送他渐行渐远，你站在路的这一端，看着他渐渐消失在小路转弯的地方，然后，他用背影默默地告诉你：“不必追。”        ——龙应台
- 
- > 你要接受这世界上总有突如其来的失去，洒了的牛奶，遗失的钱包，走散的爱人，断掉的友情等。当你做什么都于事无补的时候，唯一能做的，就是努力让自己过的好一点，丢都丢了，就别再哭了。
- 
- > 你如果认识从前的我,也许你会原谅现在的我.——张爱玲《倾城之恋》
- > 如果你给我的,和你给别人的是一样的,那我就不要了——三毛
- <center>
- 草在结它的种子
- 风在摇它的叶子
- 我们站着，不说话
- 就十分美好——顾城
- </center>
- 
- > 每一个不曾起舞的日子，都是对生命的辜负。一个人知道自己为什么而活，就可以忍受任何一种生活。其实人跟树是一样的，越是向往高处的阳光，它的根就越要伸向黑暗的地底。 ——尼采
- > 听过很多道理 却依然过不好这一生。——韩寒
- > 在有生的瞬间能遇见你，竟花光我所有的运气——林夕
- > 你走，我不送你。你来，无论多大风多大雨，我要去接你。——梁实秋
- > 哪里会有人喜欢孤独,不过是不喜欢失望。——村上春树《挪威的森林》
- > 曾以为走不出的日子，现在都回不去了。——村上春树
- > 在茫茫人海中相遇相知相守，无论谁都不会一帆风顺，只有一颗舍得付出懂得感恩的心，才能拥有一生的爱和幸福。——宫崎骏
- > 尽可能爱的单纯一点，尽可能活的纯洁一点，尽可能活的有良心一点，尽可能在成为一个成功的人同时成为一个可爱的人，尽可能活的美一点。——陈果
- > 肉体是每个人的神殿，不管里面供奉的是什么，都应该好好保持它的强韧、美丽和清洁。——村上春树
 
 ## 那些应该牢记的道理
 ----------------------
@@ -252,7 +192,6 @@ toc:
 * 如果做不到对别人狠，那就对自己狠一点。
 * 在自己心智还没完全成熟稳重时候，我愿意拒绝所有的暧昧和放下想爱的人。
 * 我所理解的生活，就是和自己喜欢的一切在一起。
-* 刻意去找的东西，往往是找不到的，天下万物的来和去，都有他的时间。——三毛
 * 不辜负时间的馈赠，努力活成自己喜欢的模样。
 * 要酷，要优秀，要成为别人的可望不可及。
 * 少吃真的会瘦，瘦了真的好看，好看真的有用。
@@ -276,13 +215,11 @@ toc:
 * 做人要懂事有趣，保持理智。
 * 一定要自己做决定啊，就算是后悔也要自己来。
 * 要替自己着想，但为自己而活。
-* 往好里说是变得顽强了，往坏里说是自己身上纯真的感受性磨损掉了。——村上春树
 * 遇见你不容易，错过了会很可惜。
 * 其实道理谁都懂，只是有时候选择自欺欺人。
 * 在寻找真爱的路上匍匐前进，不管南北东西，直觉会给我们指引。
 * 所有人都在努力，并不是只有你，满腹委屈。
 * 我得收拾自己的烂摊子。
-* 唯有身处卑微的人最有机会看到世态人情的真相。——杨绛
 * 好好生活，别总跟自己过不去。
 * 可不可以跟世界请个假，我想暂时离开下。& 我心情不好，想死两天。（I feel bad and wanna die for about two days.）
 * 世间什么最难得？徒手摘星，爱而不得，世人万千，再难遇我。
@@ -308,7 +245,6 @@ toc:
 * 一个人的生活，没牵挂，没感动，没惊喜，也没失望。
 * 所谓节日，就是让快乐的人更快乐，孤单的人更孤单的日子。
 * 我现在，除了别人觉得不好，再没什么不好。
-* 当你因为太过迷茫，太过偏执，以至于曲解了梦想和责任，不如先学会生活。——皮囊
 * 难熬的日子里，什么也没说，所以以后，也不必说。
 * 生活真是糟透了，烂透了，没得救。
 * 要总结任何一个人一生的经历，你并不需要太多的字，有人已经用十二个字概括了：他生了下来，他受了苦，他死了。如何在短暂的一生，幸福而充实地活着，是我们都在追寻的答案。
@@ -327,7 +263,6 @@ toc:
 * 抓不住的东西，伸手都是错的
 * 听说风吹过经幡一次，就是诵经一遍。
 * 当你心中满是荒凉，人间便似绝望刑场。
-* 满天星光，满屋月亮，人生何如，为什么这么荒凉——萧红
 * 一开始我以为人是慢慢长大的，后来才发现人都是突然间长大的
 * 关于等待的故事总是让人很动容，可它能感动到的，也不过是读者和主人公自己。
 * 但愿在这个拼的你死我活的世界里，我能有一份不用努力的，刚刚好的爱情。
@@ -348,7 +283,6 @@ toc:
 * 愿你一生温暖纯良，不舍爱与自由。
 * 记住了 自己喜欢的东西 就不要问别人好不好看 喜欢胜过所有道理 原则抵不过我乐意
 * 你要学着无论遇到什么事情 欣喜 悲伤或是濒临崩溃 都能够不动声色自己处理事情 自己辨别对错 好好成长
-* 像他明天就会来一样期待 像他永远不会来一样生活——张爱玲
 * 我们终其一生的努力 真正能够把握的也不过是自己的喜怒哀乐
 * 人生最重要的时刻就是你突然发现自己是错的那一刻，是你转变观念的那一刻。人的意识太深了，为了维护自己的意识人类可以做出很多可怕的事情，如果你能从根本发现自己原来没有那么对，整个人生进程都会有质的改变。——李诞
 * 人生来最爱什么？自由和自我。违背人类本性的关系都很难快乐，也很难持久。
@@ -356,7 +290,6 @@ toc:
 <!--* 北京的一天太短了，短到还没开始就结束了。-->
 <!--* 你真的缺席了太多我需要你的时刻-->
 <!--* 西藏是一种病，没来想尝试，来了无药可治-->
-* 我，一团火，灼人，也将自焚。——臧克家
 * 很多事 我能想通 也能接受 但我很难受
 * 我根本无法在这世间任何人身上得到所谓的情感来慰藉心灵，我全部的爱 皆来自于我的臆想
 * 这个世界 看你笑话的人 永远比在乎你的多 
@@ -369,16 +302,13 @@ toc:
 * 嫉妒是一种变相的赞美 嫉妒也是一种变相的自卑
 * 不是不能吃苦，不是不能放下一切，可总是要有那么个值得的人。
 * 愿你三冬暖，愿你春不寒，愿你天黑有灯，下雨有伞，愿你一路上，有良人相伴。愿你所有快乐，无需假装。愿你此生尽兴，赤诚善良。愿时光能缓，愿故人不散；愿有人陪你颠沛流离，愿你惦念的人能和你道早安，愿你独闯的日子里不觉得孤单。愿你人间走一遭，圆满了三界六道，看透了是非善恶；从此福来心至，皆是逍遥。
-* 人生最困难的三件事：保守秘密，忘掉所受的创伤，充分利用余暇。——吉罗
 * 很多事介于不说委屈说了矫情之间。
 * 不如就利用孤单一人的时间，使自己变得更优秀，如刀劈斧凿一样雕刻自己，给别人一个惊喜，也给自己一个好的交代。
 * 阿德勒手帐中写道：幸福婚姻是这样的：你是我见过最好的人，你是最契合我的人，你是我眼里最优秀的人，你是我的灵魂伴侣，你是能给我保护的人，你是我的知心朋友，你是能分享我一切的人。  我们共同成长、相互照应，在最无助和软弱时候，你能托起我的下巴，扳指我的脊梁，令我坚强，并陪伴我左右，共同承受命运。  我们之间除了爱，还有肝胆相照的义气，不离不弃的默契，共同孕育的成长，以及铭心刻骨的恩情。
 * 每个人都以为自己所做的是对的，但每个人却不知道，自己也可能做着一件错事，错到需要别人的原谅。
 * 许多年里，我们原谅一个人，或是宽容一个人，不是与别人和解，而是与自己的一场和解。
 * 我很难过 怎么翻译？ I'm fine.
-* 世界上有两件东西不能直视：一是太阳，二是人心。——东野圭吾
 * 所有渴望别人理解的行为都是弱者的行为，人的强大，第一步要学会孤独，第二步要学会不理解，第三步就是用结果去碾压。
-* 《孤独是人生的修行》 《孤独是生命的礼物》 《百年孤独》
 * 镜花水月，终是虚幻，你羡慕我的恬淡，我好奇你的纷扰。
 * 专情，孤傲，只暖喜欢的人，只把感情用在对的人身上。
 * 人性这种东西，不可言，不可研，不可验。
@@ -394,7 +324,6 @@ toc:
 * 最惬意的幸福是在柴米油盐酱醋茶下也能安然自得，也能浪漫随心，也能充盈生活，也能陪伴如初
 
 * 人生的路，有时候走着走着才开阔起来的
-* 你只管往前走，碰到什么是什么——亦舒
 * 你要做一个不动声色的大人，自己去过另外的生活，不是所有的鱼，都生活在同一片海里。
 * 我不希望这场旅行太过于轻松和容易，我觉得经历苦难和遭遇挫折坎坷，是人生一大财富，无人能懂，也无需人懂，做自己就好。
 * 当我们不能改变的时候，唯有改变自己，所有的不快乐来自于自己的欲望
@@ -411,11 +340,10 @@ toc:
 * 人们去远方只是为了紧紧地搂住自己 我只喜欢在笛声中闻着野草的清香
 * 大自然本就充满细节，是人类自己选择忽略
 * 风能吹起一张白纸，却无法吹走一只蝴蝶，因为生命的力量在于不顺从
-* 想做什么就去做吧 每一个犹豫不决的挣扎 都是对人生最大的浪费——《不认命 就拼命》
 * 人生总要勇敢一次，去做你真正想做的事
 * 在喜怒哀乐间走走停停，不知道在下一秒会遇见谁，会发生什么，只知道，阳光这么好，不要辜负了今天
 * 去做你想做的事，趁阳光正好，微风不燥，你还未老
-* 在这个世界上一定有另一个人我，做着你不敢做的事，过着你想过的生活，并且跟喜欢的人在——蓝另一种蓝
+
 
 * 睡前原谅一切，醒后不问过往
 * 很多时候我们不幸福，就是对外界寄予太多的渴望，一旦落空，就会剩下满满的失落。
@@ -444,7 +372,6 @@ toc:
 * 一个人出来会遇到一群人，一群人也会感染一个人
 * 恋爱是一种选择，独身也是
 * 熬夜，是因为没有勇气结束这一天 赖床，是因为没有激情开始这一天 好好睡一觉 把心里的垃圾倒一倒
-* 我愿意像茶，把苦涩留在心里，散发出来的都是清香——《独白》
 * 孤独是给你思考自己的时间，在一个人的日子里，你要做的只有一件事，把自己变得更优秀。
 * 荷尔蒙决定一见钟情，多巴胺决定天长地久，肾上腺决定出不出手，自尊心决定谁先开口，最后寿命和现实，决定谁先离开谁先走。
 * 人一旦习惯了孤独，才是比悲伤更悲伤的事
@@ -463,7 +390,6 @@ toc:
 * 既然都是凡夫俗子，就要好好沉溺于生活。你总得把断浆划起来。
 * 其实这世上本没有什么启程，都是过程。时间把一切串起，不可分割。
 * 喜欢旅行不是因为有钱，而是不想老了以后后悔。风景确实会一直都在，但那颗年少轻狂的心终会消失
-* 得到的全是侥幸，失去的才是人生——《少年派》
 * 人最大的痛苦，来自无法接受命运的无常，以及生而为人的脆弱。
 * 你要不顾一切，让自己变得优秀，即使是在那些糟糕的日子里。
 * 人活这一辈子，最好的状态就是，轻装上阵，去感受这个世界的美好。
@@ -473,3 +399,73 @@ toc:
 * 最喜欢书后记里的一句话：一个人改变自己内心的最佳捷径是什么？改变自己的外在。
 * “跑超级马拉松不可能对你有什么好处，我想不出那种运动怎么会对身体有好处。”“对身体有好处？不，的确对身体没好处。可就算是你受伤了，也能痊愈。就算累着了，也能休息回来。关键是，当你跑完了50千米或者是160千米，当你跑过终点线的一刹那，你就不再是起跑线上的那个你了。”
 * 不自律会满满摧毁一个人的心智、外貌、甚至是人生。自律，是解决人生问题的首要工具，也是消除人生痛苦的重要手段。
+* 赤裸裸的想赢，不掩饰自己做强者的野心，是一件很酷的事。落入平庸，是从丢失胜负欲开始的。
+* "自己"这个东西是看不见的，撞上一些别的什么，反弹回来，才会看见"自己"。所以，去和更强大、更广阔的食物对撞，在一次次的对撞中，你才能验证自己的内心。最终，你的行动会告诉你，你是谁，你真正想要做的事情是什么。
+* 人一切的痛苦，本质上都是对自己无能的愤怒。而自律，恰恰是解决人生痛苦的根本途径。
+* 人一旦开始发现自己变得更好了，就会变得更加贪心，还想要变得更好。变好不应该有上限，这才是一个人趋于完美的最佳动力源泉。
+* 实现自律的三大秘诀：1.学会给目标清单减负 2.学会对目标进行量化 3.学会张弛有度
+* 真正废掉一个人的是安于现状的心。
+* 人生苦短，余生很贵，不要做一个令人喜欢的人，而做一个自己喜欢的人。
+* 独行，是一种唯美的力量，它能让你获得真正的自由，相信我，排除万难也要走进孤独，终将不负此生。
+* 这个世界，看似周遭嘈杂，各色人等，本质上，还是你一个人的世界，你若澄澈，世界就干净，你若简单，世界就并不复杂。
+* 人年轻的标志，就是不论在什么年纪，依旧葆有对这个世界的好奇之心。
+* 你不必逞强，不必说谎，懂你的人自然知道你原来的模样，不要像猫一样在风雨中长大，遇到点爱就以为是家。一定要加倍努力，等到遇到对的人，才不会显得狼狈不堪毫无准备。世界不曾偏爱一个不劳而获的人，也不会辜负一个努力的人。打磨自己的过程很疼，到最终能塑造一个更好的自己。
+* 梦中一世忆，尽惘然...
+* 气质在肩，年龄在背，活力在腹，性感在臀，自信在腿，健康在颈椎。追求在个人，女人这一生，唯有美，不可妥协，唯有自己，不可辜负，因为全世界，你最珍贵。
+
+* 但也还是无法讨厌上海，尽管这个又冷又湿的冬天那么准确的描绘了我和身边的朋友们正在经历的这一段人生，很难，甚至有些丑陋，每一滴雨都真实可感，所有问题都是散布在裤腿上的泥渍，等我们用一把细毛刷，一点一点刷掉。
+
+* 酒足饭饱，你再身边，这就是我能想到的美好生活。我身边有个姑娘结婚之后，就把微信个人签名改成了："终于不再需要食物给我安全感。"当时看得我还挺感动，然后顺手又往嘴里塞了块曲奇饼干，特别喜欢吃东西，很多时候是因为觉得无聊。
+
+* 你看这字里行间，年复一年，春光不必趁早，冬霜不会迟到，相聚别离，都是刚刚好。 ​​​​
+* 自律是一个人最美的修行
+* 余生无畏，只像自由妥协
+* 放自己一马，哪怕只有今天
+What makes me really happy?
+* 旅行是一场豪赌，赌前路美好，赌如你所料。但生活哪有剧本给你挑，那些不期而会的遇到，才是无招胜有招。
+
+```
+突然有一天，他不联系你了。
+
+为什么不承认，他没你想象中那么爱你呢，或者，你刚好赶上了他一段时间空档，你也有一时兴起去吃个炭火烤肉的时候，那鸡胸，那小排，那雪花肉，火上走一遭，滋滋冒油，香气扑鼻而来，你没必要一次就吃撑，辜负了肉也辜负了胃，留个念想不好吗？你年轻轻轻早该懂，爱恨和吃饱，都要有分寸。
+
+你是灵魂有肉香的女子，他是尘世吃素的修行人，各有各的路，干嘛非要挤在一个独木桥上渡劫呢。别拿暧昧当爱情来处，谁的爱情也不能一直藏在你来我往的试探里，你进一步，他退一步，多明显，承认他不爱你，你才有机会去碰见真爱。
+
+仔细想想，你也没有一生，可以慷慨的送给别人。
+
+没在一起就没在一起吧，反正时间很长，它会把另外一个人推进你的世界，你会尝试接受新的选择，你最爱吃的章鱼小丸子没有了，多往前走几步吧，仍有糖炒栗子、榴莲酥、糖葫芦、烤地瓜，我知道你空着肚子留给小丸子，但是，以后的路还要走，总要填饱肚子。
+
+一个姑娘强大的标志是什么？
+
+有脾气，但不乱发脾气。
+
+有情绪，但不情绪化工作。
+
+会聆听，不反驳别人的过错。
+
+会管理时间，不浪费在无效社交聚会上。
+
+会妥协，但懂得为人处事之道，不露锋芒。
+
+会挣钱，会花钱，也会扔东西。
+
+有情趣爱好，也有专业能力爱好。
+
+不拖延，不熬夜，不抱怨。
+
+会享受孤独，但也不拒绝婚姻。
+
+有一大堆的标志，预示这个姑娘，独立、自由、成熟，但这一切，可以归结为3个字：会生活。
+
+用自己喜欢的方式，过一生。
+
+结不结婚，只是选择生活方式的一种，目的都是选择一种让自己舒服活着的方式，千金难买人家乐意，可是，结婚的鄙视没结婚的说人家是剩女，单身的笑话女的结了婚公主变保姆，这就过分了，没有谁，有资格指责和指导别人的人生，嘴碎，是一种病，被人家扇几耳光就好了。
+
+结不结婚，两种生活，没有对错，各有各的福，互相尊重对方的选择，就好了。
+
+希望你新的一年像毛血一样旺，敢于手撕包菜、干煸菜花、剁椒鱼头，活的蒸汽腾腾不好惹。
+
+希望有人疼你像糖醋入排骨，有人宠你像鸡翅百事可乐，有人陪你哭诉脆皮肠，就算生活时常很苦偶尔很甜，也要活的酸爽麻辣。
+
+希望你好好吃饭，好好恋爱，好好工作，好好学习，天天向上。
+```
