--- a/source/_posts/名言.md
+++ b/source/_posts/名言.md
@@ -90,3 +90,7 @@ toc:
 * 唯有身处卑微的人最有机会看到世态人情的真相。——杨绛
 * 在这个世界上一定有另一个人我，做着你不敢做的事，过着你想过的生活，并且跟喜欢的人在——《蓝，另一种蓝》
 * 想做什么就去做吧 每一个犹豫不决的挣扎 都是对人生最大的浪费——《不认命 就拼命》
+* 这短短的一生，我们最终都会失去。你不妨大胆一些，爱一个人，攀一座山，追一个梦。——《大鱼海棠》
+* 人生既不能延长，也没有赞美。既然这样，就觉得不如做些想都没想过的事，当做回忆也好啊。——伊坂幸太郎
+* 不管你怎么样都好，尝试各式各样的事情，就是人生——伊坂幸太郎
+* 当我们面对不同的时候，不要急着去嘲笑，不要急着去批判，先试着去理解——斯宾诺莎
