--- a/source/_posts/喜欢的句子.md
+++ b/source/_posts/喜欢的句子.md
@@ -423,49 +423,33 @@ toc:
 * 放自己一马，哪怕只有今天
 What makes me really happy?
 * 旅行是一场豪赌，赌前路美好，赌如你所料。但生活哪有剧本给你挑，那些不期而会的遇到，才是无招胜有招。
+* 天赐食于鸟，但绝不投食于巢。
+* 无缘某个人，错失某件事，本是人生常态，无需太多纠缠。
 
 ```
 突然有一天，他不联系你了。
-
 为什么不承认，他没你想象中那么爱你呢，或者，你刚好赶上了他一段时间空档，你也有一时兴起去吃个炭火烤肉的时候，那鸡胸，那小排，那雪花肉，火上走一遭，滋滋冒油，香气扑鼻而来，你没必要一次就吃撑，辜负了肉也辜负了胃，留个念想不好吗？你年轻轻轻早该懂，爱恨和吃饱，都要有分寸。
-
 你是灵魂有肉香的女子，他是尘世吃素的修行人，各有各的路，干嘛非要挤在一个独木桥上渡劫呢。别拿暧昧当爱情来处，谁的爱情也不能一直藏在你来我往的试探里，你进一步，他退一步，多明显，承认他不爱你，你才有机会去碰见真爱。
-
 仔细想想，你也没有一生，可以慷慨的送给别人。
-
 没在一起就没在一起吧，反正时间很长，它会把另外一个人推进你的世界，你会尝试接受新的选择，你最爱吃的章鱼小丸子没有了，多往前走几步吧，仍有糖炒栗子、榴莲酥、糖葫芦、烤地瓜，我知道你空着肚子留给小丸子，但是，以后的路还要走，总要填饱肚子。
+```
 
+```
 一个姑娘强大的标志是什么？
-
 有脾气，但不乱发脾气。
-
 有情绪，但不情绪化工作。
-
 会聆听，不反驳别人的过错。
-
 会管理时间，不浪费在无效社交聚会上。
-
 会妥协，但懂得为人处事之道，不露锋芒。
-
 会挣钱，会花钱，也会扔东西。
-
 有情趣爱好，也有专业能力爱好。
-
 不拖延，不熬夜，不抱怨。
-
 会享受孤独，但也不拒绝婚姻。
-
 有一大堆的标志，预示这个姑娘，独立、自由、成熟，但这一切，可以归结为3个字：会生活。
-
 用自己喜欢的方式，过一生。
-
 结不结婚，只是选择生活方式的一种，目的都是选择一种让自己舒服活着的方式，千金难买人家乐意，可是，结婚的鄙视没结婚的说人家是剩女，单身的笑话女的结了婚公主变保姆，这就过分了，没有谁，有资格指责和指导别人的人生，嘴碎，是一种病，被人家扇几耳光就好了。
-
 结不结婚，两种生活，没有对错，各有各的福，互相尊重对方的选择，就好了。
-
 希望你新的一年像毛血一样旺，敢于手撕包菜、干煸菜花、剁椒鱼头，活的蒸汽腾腾不好惹。
-
 希望有人疼你像糖醋入排骨，有人宠你像鸡翅百事可乐，有人陪你哭诉脆皮肠，就算生活时常很苦偶尔很甜，也要活的酸爽麻辣。
-
 希望你好好吃饭，好好恋爱，好好工作，好好学习，天天向上。
 ```
