--- a/source/_posts/收集.md
+++ b/source/_posts/收集.md
@@ -43,7 +43,6 @@ toc:
 * 《soap》
 * 《blow me a kiss》
 * 《staring at you》
-* 《Higher》
 * 01.《Drip Drip Drip》[低落的星星]
 * 02.《Dance of Gossamer》[薄纱之舞]
 * 03.《Floating in the City》[城市漂流]
@@ -73,25 +72,7 @@ toc:
 
 
 # 旅游收集
-## 国内
-* 蓝月谷、紫霞殿、米勒、香格里拉（云南）
-* 梵净山（贵州）
-* 巴音布鲁克、鹿角湾（新疆）
-* 稻城亚丁，甘孜
-* 四川大邑西岭雪山阴阳界
-* 承德 双塔山
-* 敦煌 大地之子
-* 湖南 芙蓉古镇、凤凰古镇、张家界
-* 三亚、迪斯尼、桂林、西湖、神农架、长白山
-## 国外
 * [圣托里尼](https://guchunli.github.io/2018/08/11/圣托里尼/)
-* 仙本那（马来西亚）
-* 巴厘岛 天空之门
-* 柬埔寨 吴哥窟
-
-## done
-* 长岛 九丈崖（烟台）
-
 
 ## 句子收集
 [喜欢的句子](https://guchunli.github.io/2018/02/02/喜欢的句子/)
@@ -125,7 +106,10 @@ Lucca
 * 读书，练字（楷书，毛笔字，书法笔，立体字口诀：1.只要下边和右边 2.有连接处要断笔 3.断笔处留好空隙）
 * 美术：[铅笔画](https://guchunli.github.io/2018/06/12/铅笔画/)，禅绕画，简笔画，彩铅，[水彩](https://www.zhihu.com/question/31381682)，油画
 * 音乐：吉他，古筝，唱歌，跳舞，钢琴，打击垫
-* 运动：跑步，跆拳道，球类，轮滑，游泳，台球，舞蹈爵士瑜伽普拉提，跳绳，旅行，瑜伽，尊巴，健身
+* 运动：
+球类：台球，棒球，网球，羽毛球，兵乓球，篮球
+瑜伽，普拉提，拉丁舞，爵士舞，肚皮舞，尊巴，瘦身操，有氧舞蹈，形体芭蕾
+跑步，跆拳道，防身术，轮滑，游泳，跳绳，攀岩
 * 外语：英语，韩语，日语，法语
 * other：摄影（微单：索尼ILCE-5100L APS-C 2999），烘焙，手工，棋类，书法，手工，数独，魔方，口哨
 
@@ -143,7 +127,7 @@ Lucca
 
 * 眼保健操
 * 去浮肿：口味清淡，躺靠墙，空中自行车，西红柿，芹菜，香蕉
-* 波比跳，郑多燕，HIIT，tabate，insanity，美丽芭蕾
+* 波比跳，郑多燕，HIIT，tabate，insanity，美丽芭蕾，凯格尔
 
 蹲起100
 仰卧起坐50
