--- a/source/_posts/读书笔记.md
+++ b/source/_posts/读书笔记.md
@@ -31,7 +31,6 @@ toc:
 * 《围城》
 * 《王阳明心学》
 * 《你是世界写给我的情书》
-* 《人性的弱点》
 * 《二十几岁，没有十年》
 * 《追风筝的人》
 * 《极简力》
@@ -44,10 +43,19 @@ toc:
 * 《西西弗的神话》
 * 古希腊罗马神话故事
 * 《如何让你爱的人爱上你》
-* 《鬼谷子》
-* 《羊皮卷》
-* 《墨菲定律》
-* 《狼道》
+* 《愿你喜欢被岁月修改的自己》——张西
+* 《自私的基因》
+* 《从0到1》
+### 《人性的弱点》
+* 世界上最无情的不是人，而是时间，最难听的不是脏话，而是谎言
+### 《鬼谷子》
+* 如果你遇到的是猪，你不用跟他谈思想，因为他关心的是饲料
+### 《羊皮卷》
+* 爱笑的人运气不会太差，因为运气差的人根本笑不出来
+### 《墨菲定律》
+* 教会你不要相信任何人的都是你最信任的人
+### 《狼道》
+* 外向是生活所需，孤独才是自我享受
 * 《剑来》烽火戏诸侯
 * 《选择》
 * 《生活需要仪式感》
@@ -105,7 +113,6 @@ toc:
 ## part
 ### 《厚黑学》——李宗吾
 ### 《人生三书》——龙应台
-### 《皮囊》——蔡崇达
 ### 《活着》——余华
 * 以笑的方式哭，在死亡的伴随下活着。——《活着》
 * 人类无法承受太多的真实。——《活着》
@@ -117,6 +124,8 @@ toc:
 
 ## done
 ### 《看见》——柴静
+
+### 《我不喜欢这世界，我只喜欢你》
 
 ### 《每个人都是一座孤岛》——沈三废
 * 我们遇见很多人，和很多人分开，又和很多人再相遇。大家都一样，没有什么不同，一样的孤单，一样的幸福。
@@ -151,3 +160,9 @@ toc:
 * 不知道在哪里看到，说人不快乐的时候就会思考人生的意义，现在想想，快乐真是一味好药，真是维稳世界最好的致幻剂，清醒本就是最荒唐的。
 * 真情实感流露出来就变了调，它在心里是真诚而坚定的，表露出来就脱离了你的精神，开始接受世界的质询，你以这质询为尺度，时时刻刻衡量自己。累。
 * 相同之事也反复发生在明日，只需遵从与昨天同样的惯例，只要避免过度的狂喜，自然不会有悲哀造次，蟾蜍总是会迂回前进，躲开阻挡前方的路石。（若能避开猛烈的欢喜，自然不会有悲痛来袭）
+
+### 《皮囊》——蔡崇达
+
+### 《时间的礼物》——弗雷德里克 巴克曼
+
+### 《运动健身与营养》——史仍飞、袁海平
