--- a/source/_posts/喜欢的句子.md
+++ b/source/_posts/喜欢的句子.md
@@ -409,6 +409,7 @@ toc:
 * 独行，是一种唯美的力量，它能让你获得真正的自由，相信我，排除万难也要走进孤独，终将不负此生。
 * 这个世界，看似周遭嘈杂，各色人等，本质上，还是你一个人的世界，你若澄澈，世界就干净，你若简单，世界就并不复杂。
 * 人年轻的标志，就是不论在什么年纪，依旧葆有对这个世界的好奇之心。
+* 饮食、男女、懒惰、推脱责任，是本能，是低级别的人性，是娘胎里带的，基因里有的。勤奋、自律、担当，是能力，是高级别的人性，是后天学习和训练出来的。人分三六九等，贤愚有别，不是别人给分的，都是自己求来的。生而为人，为什么只躺在低级别的人性上。
 * 你不必逞强，不必说谎，懂你的人自然知道你原来的模样，不要像猫一样在风雨中长大，遇到点爱就以为是家。一定要加倍努力，等到遇到对的人，才不会显得狼狈不堪毫无准备。世界不曾偏爱一个不劳而获的人，也不会辜负一个努力的人。打磨自己的过程很疼，到最终能塑造一个更好的自己。
 * 梦中一世忆，尽惘然...
 * 气质在肩，年龄在背，活力在腹，性感在臀，自信在腿，健康在颈椎。追求在个人，女人这一生，唯有美，不可妥协，唯有自己，不可辜负，因为全世界，你最珍贵。
@@ -425,6 +426,7 @@ What makes me really happy?
 * 旅行是一场豪赌，赌前路美好，赌如你所料。但生活哪有剧本给你挑，那些不期而会的遇到，才是无招胜有招。
 * 天赐食于鸟，但绝不投食于巢。
 * 无缘某个人，错失某件事，本是人生常态，无需太多纠缠。
+* 不是这个世界对你要求越来越高，是你对自己要求不够高。
 
 ```
 突然有一天，他不联系你了。
