--- a/source/_posts/OC面试题总结-2019.md
+++ b/source/_posts/OC面试题总结-2019.md
@@ -8,3 +8,6 @@ toc:
 ---
 
 
+[iOS定时器相关](https://guchunli.github.io/2019/08/11/iOS定时器相关/)
+
+[iOS runtime与runloop学习笔记](https://guchunli.github.io/2017/03/22/iOS-runtime学习笔记/)
