--- a/source/_posts/喜欢的句子.md
+++ b/source/_posts/喜欢的句子.md
@@ -455,3 +455,15 @@ What makes me really happy?
 希望有人疼你像糖醋入排骨，有人宠你像鸡翅百事可乐，有人陪你哭诉脆皮肠，就算生活时常很苦偶尔很甜，也要活的酸爽麻辣。
 希望你好好吃饭，好好恋爱，好好工作，好好学习，天天向上。
 ```
+
+* you only live once.
+* 人生版本XX更新完毕，开始启动。
+* 没有人可以让你认输，除非你不想赢。
+* 多少难熬的我都熬过去了，现在的我不闻不问，不痛不痒，又凭什么不快乐。
+* 不能既配不上自己的野心，又辜负了自己曾受的苦难
+* 不管这世界如何为难，我都不会让它称心如意
+* 当你独自穿过了暴风雨，你就不再是原来那个人了
+* 生活可以是甜的，也可以是痛苦的，但不能是没味的，你可以胜利，也可以失败，但你不能屈服。
+* 你要抓住现在，你要喜欢自己，你要记得自己的名字，你要向前走，走下去。往山穷水尽柳暗花明去。
+* 我将永远忠于自己，披星戴月奔向理想和你。
+* 生命只是时间中的一个停顿，一切的意义只在它发生的那个时刻
