--- a/source/_posts/收集.md
+++ b/source/_posts/收集.md
@@ -26,6 +26,25 @@ toc:
 * 《看不见的客人》
 * 《只有你》
 * 《最完美的离婚》
+* 《爱你，罗西》
+* 《小鞋子》
+* 《云端之上》
+* 《我的一级兄弟》
+* 《魔女》
+* 《八个女人一台戏》
+* 《何以为家》
+* 《我们与恶的距离》
+* 《纯情》
+* 《猫鼠游戏，雨人，一级恐惧》
+* 《新世界》
+* 《露水红颜》
+* 《沉睡魔咒》
+* 《赛末点》
+* 《咖啡遇见香草》
+* 《世界奇妙物语》
+* 《就是喜欢猫》
+* 《菲利普狄克的电子梦》
+
 ## 孤独
 * 《她》
 * 《绿皮书》
