--- a/source/_posts/读书笔记.md
+++ b/source/_posts/读书笔记.md
@@ -46,6 +46,9 @@ toc:
 * 《愿你喜欢被岁月修改的自己》——张西
 * 《自私的基因》
 * 《从0到1》
+* 《在细雨中呼喊》——余华
+* 《所谓成长，就是逼你学会坚强》
+* 《卡耐基写给女人一生的幸福忠告》
 ### 《人性的弱点》
 * 世界上最无情的不是人，而是时间，最难听的不是脏话，而是谎言
 ### 《鬼谷子》
